--- a/articles/rfi/999952.md
+++ b/articles/rfi/999952.md
@@ -1,5 +1,5 @@
-<!--1713532503000-->
-[美国宇航局局长警告：中国利用民用项目掩盖太空军事存在](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A-%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8)
+<!--1713541502000-->
+[美媒：美国得到以色列袭击伊朗的预告但未同意也未参与](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E5%AA%92-%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E)
 ------
 
-<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/c28e1990-fd67-11ee-b1f8-005056a97e36/w:1280/p:16x9/AP23117711747550.jpg"><p><strong>美国宇航局局长比尔·尼尔森 4 月 17 日在华盛顿表达了对中国秘密航天进展的担忧。他警告说，中国通过利用民用项目来掩盖军事目标以增强其太空能力，并警告华盛顿必须保持警惕。         </strong></p><div><p>中国在航空航天领域的进步，尤其是其不透明的做法，令美国宇航局感到担忧。比尔·尼尔森告诉国会山议员，中国对其太空进展“非常非常保密”，并警告“我们正在一场竞赛”。尼尔森怀疑中国的民用太空计划实际上隐藏着军事计划，这凸显了北京缺乏透明度。</p><p>美国宇航局局长比尔·尼尔森在国会山对议员们说：“中国取得了非凡的进步，特别是在过去十年中，但它们非常非常保密。”</p><p>尼尔森说：“我们认为，他们很多所谓的民用太空计划都是军事计划。我认为，实际上，我们正在进行一场竞赛。”</p><p>他说他希望北京能够“清醒过来，明白民用空间是用于和平用途”，但他补充说：“我们还没有看到中国表现出这一点。”</p><p>尼尔森是在众议院拨款委员会就 NASA 2025 年预算作证时发表上述言论的。</p><p>他表示，美国应该在中国之前再次登陆月球，因为两国都在执行月球任务。但他表示担心，如果北京先到达，可能会说：“好吧，这是我们的领土，你别进来。”</p><p>尼尔森此前表示，美国正在与中国“进行太空竞赛”，并警告说，中国最终可能声称“拥有”月球资源丰富的地区。</p><p>2022年，中国航天计划建成了地球轨道空间站，并实施了多次绕月和样本回收任务。</p><p>此后，美国一直计划通过阿耳忒弥斯三号任务在 2026 年将宇航员送回月球。中国表示希望在2030年之前将人类送上月球。</p><p>尼尔森表示，他相信美国不会失去其在太空探索方面的“全球优势”。</p><p>他说美国必须现实一点，因为“中国确实投入了大量资金，他们的预算还有很大的增长空间。“ 但 “我认为我们最好不要放松警惕。”</p><p>据美国国防情报局称，中国目前有 499 颗卫星在轨运行。这个数字是 2019 年的两倍多。中国还正在开发间谍气球和高超音速导弹。</p><p>《阿耳忒弥斯协定》是由美国宇航局和美国国务院起草一项要求太空活动必须出于和平目的的协议，已由包括英国在内的 40 多个国家签署。中国尚未签署这些协议。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpb.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AE%2587%25E8%2588%25AA%25E5%25B1%2580%25E5%25B1%2580%25E9%2595%25BF%25E8%25AD%25A6%25E5%2591%258A-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2588%25A9%25E7%2594%25A8%25E6%25B0%2591%25E7%2594%25A8%25E9%25A1%25B9%25E7%259B%25AE%25E6%258E%25A9%25E7%259B%2596%25E5%25A4%25AA%25E7%25A9%25BA%25E5%2586%259B%25E4%25BA%258B%25E5%25AD%2598%25E5%259C%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpb.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 13:47</div><img src="https://s.rfi.fr/media/display/c0fc8d5c-fe37-11ee-b2ed-005056a97e36/w:1280/p:16x9/Carte-Iran-RFI.png"><p><strong>对于周五凌晨伊朗中部听到巨大的爆炸声，据美国媒体报道，美国高级官员称，以色列对伊朗发动袭击是为了报复上周末以色列遭到的史无前例的无人机和导弹袭击。华盛顿得到了以色列的预告，但没有同意。        </strong></p><div><p>美国全国广播公司（NBC）和美国有线电视新闻网（CNN）分别援引熟悉此事的消息人士和一名美国官员的话报道说，以色列已提前向华盛顿发出了袭击警告，但美国没有同意这次行动，也没有参与实施。</p><p>白宫没有立即就伊朗中部的爆炸事件发表评论。据 CNN 报道，一名美国官员说：“我们没有批准这个报复行动”。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和无人机，以色列警告称将进行报复。在伊朗袭击上周末袭击以色列之前，伊朗驻大马士革领事馆遭袭击，德黑兰认为以色列负有责任。</p><p>今天以色列军队发言人就周五夜间伊朗中部的爆炸事件告诉法新社记者：“我们目前不予置评”。</p><p>不过，以色列极右翼的国家安全部长本 格维尔（Ben Gvir）在 X 上发布了一句话："软弱！"</p><p>以色列军方在周五早晨宣布，以色列北部已启动警报。</p><p>美国驻以色列使馆限制其雇员和亲属的活动范围。</p><p>伊朗总统莱西在本周早些时候表示，以色列对伊朗领土的任何攻击"都将遭到严厉回应"。</p><p>伊朗周四在联合国安理会表示，"必须迫使以色列停止针对我们利益的任何进一步军事冒险"，而联合国秘书长则警告说，中东正处于"最危险的时刻"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWyz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E5%25AA%2592-%25E7%25BE%258E%25E5%259B%25BD%25E5%25BE%2597%25E5%2588%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BC%258A%25E6%259C%2597%25E7%259A%2584%25E9%25A2%2584%25E5%2591%258A%25E4%25BD%2586%25E6%259C%25AA%25E5%2590%258C%25E6%2584%258F%25E4%25B9%259F%25E6%259C%25AA%25E5%258F%2582%25E4%25B8%258E&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E%20-%20https%3A%2F%2Frfi.my%2FAWyz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E%20-%20https%3A%2F%2Frfi.my%2FAWyz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWyz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
