--- a/articles/rfi/999959.md
+++ b/articles/rfi/999959.md
@@ -1,5 +1,5 @@
-<!--1713476703000-->
-[英国称要限制对中国投资](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84)
+<!--1713532503000-->
+[美国宇航局局长警告：中国利用民用项目掩盖太空军事存在](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A-%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8)
 ------
 
-<div>18/04/2024 - 14:07</div><img src="https://s.rfi.fr/media/display/65e6582a-fac9-11ed-a60a-005056a90321/w:1280/p:16x9/000_33EF3VR.jpg"><p><strong>英国首相苏纳克(Rishi Sunak)政府将推出一揽子措施，加大对中国贸易和投资的限制。苏纳克的最高副手警告称，英国的开放经济面临前所未有的威胁。        </strong></p><div><p>据POLITICO今天报道称，英国暗示可能在“降低风险”的推动下限制中国投资。这些措施在一定程度上兑现了苏纳克向美国总统拜登做出的承诺。</p><p>英国副首相奥利弗·道登应于周四今天在伦敦举行的一次具有里程碑意义的演讲中宣布该计划，他在演讲中表示，在冷战以来地缘政治紧张程度最高的情况下，英国必须“清醒地”认识到英国经济面临的威胁。道登将表示，英国面临“我们的自由、繁荣和安全之间的谨慎平衡”。</p><p>但他说，虽然“我们不会与全球经济脱钩”，但英国“必须通过收紧出口管制和海外投资来降低风险”，这些投资可能为中国等战略竞争对手的技术提供资金。</p><p>道登在演讲前对《Politico》杂志表示，英国“需要留意”对外投资，“这些投资正在被用来促进、支持和帮助对手的战略提升”。</p><p>但他也说，在境外投资方面，“对我来说，施加任何形式的限制都有很高的门槛。”虽然英国历史上的开放性一直是一个优势，但“我们必须清醒地认识到，我们体系的一大优势也带来了漏洞。”</p><p>英国采取上述举措之前，拜登于去年八月签署了一项行政命令，限制半导体、人工智能和量子等战略领域的对外投资。</p><p>一项调查显示，苏纳克六月访问白宫，期间他“承诺”英国建立对外投资审查制度，能够“评估投资带来的潜在国家安全风险”由 POLITICO 发布，并在商业和贸易部访问后不久分发给企业。</p><p>道登目前正在指示该部门改善对中国等战略竞争对手的新兴技术的出口管制，并组建一个新团队来分析英国政府从对外投资风险调查中获得的数据。</p><p>道登表示，这是他一直与英国盟友一起“努力解决”的问题。他说，英国拥有价值约 13 万亿英镑的外部投资股票。 “这为英国创造了价值数千亿英镑的收入，因此这对我们来说非常有价值。”</p><p>道登表示，政府希望利用《国家安全与投资法案》来筛选对英国的外国直接投资，而不是建立一个新制度，以遏制资金流向中国等战略竞争对手的敏感技术。</p><p>它将就投资何时可能提示风险发布进一步指导，并就添加涵盖关键矿物和半导体的新类别进行磋商。</p><p>与此同时，道登将宣布将对流入英国的交易的强制性报告要求进行修改，并提供“少量有针对性的豁免”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWnm.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E8%258B%25B1%25E5%259B%25BD%25E7%25A7%25B0%25E8%25A6%2581%25E9%2599%2590%25E5%2588%25B6%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E6%258A%2595%25E8%25B5%2584&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84%20-%20https%3A%2F%2Frfi.my%2FAWnm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84%20-%20https%3A%2F%2Frfi.my%2FAWnm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWnm.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/c28e1990-fd67-11ee-b1f8-005056a97e36/w:1280/p:16x9/AP23117711747550.jpg"><p><strong>美国宇航局局长比尔·尼尔森 4 月 17 日在华盛顿表达了对中国秘密航天进展的担忧。他警告说，中国通过利用民用项目来掩盖军事目标以增强其太空能力，并警告华盛顿必须保持警惕。         </strong></p><div><p>中国在航空航天领域的进步，尤其是其不透明的做法，令美国宇航局感到担忧。比尔·尼尔森告诉国会山议员，中国对其太空进展“非常非常保密”，并警告“我们正在一场竞赛”。尼尔森怀疑中国的民用太空计划实际上隐藏着军事计划，这凸显了北京缺乏透明度。</p><p>美国宇航局局长比尔·尼尔森在国会山对议员们说：“中国取得了非凡的进步，特别是在过去十年中，但它们非常非常保密。”</p><p>尼尔森说：“我们认为，他们很多所谓的民用太空计划都是军事计划。我认为，实际上，我们正在进行一场竞赛。”</p><p>他说他希望北京能够“清醒过来，明白民用空间是用于和平用途”，但他补充说：“我们还没有看到中国表现出这一点。”</p><p>尼尔森是在众议院拨款委员会就 NASA 2025 年预算作证时发表上述言论的。</p><p>他表示，美国应该在中国之前再次登陆月球，因为两国都在执行月球任务。但他表示担心，如果北京先到达，可能会说：“好吧，这是我们的领土，你别进来。”</p><p>尼尔森此前表示，美国正在与中国“进行太空竞赛”，并警告说，中国最终可能声称“拥有”月球资源丰富的地区。</p><p>2022年，中国航天计划建成了地球轨道空间站，并实施了多次绕月和样本回收任务。</p><p>此后，美国一直计划通过阿耳忒弥斯三号任务在 2026 年将宇航员送回月球。中国表示希望在2030年之前将人类送上月球。</p><p>尼尔森表示，他相信美国不会失去其在太空探索方面的“全球优势”。</p><p>他说美国必须现实一点，因为“中国确实投入了大量资金，他们的预算还有很大的增长空间。“ 但 “我认为我们最好不要放松警惕。”</p><p>据美国国防情报局称，中国目前有 499 颗卫星在轨运行。这个数字是 2019 年的两倍多。中国还正在开发间谍气球和高超音速导弹。</p><p>《阿耳忒弥斯协定》是由美国宇航局和美国国务院起草一项要求太空活动必须出于和平目的的协议，已由包括英国在内的 40 多个国家签署。中国尚未签署这些协议。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpb.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AE%2587%25E8%2588%25AA%25E5%25B1%2580%25E5%25B1%2580%25E9%2595%25BF%25E8%25AD%25A6%25E5%2591%258A-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2588%25A9%25E7%2594%25A8%25E6%25B0%2591%25E7%2594%25A8%25E9%25A1%25B9%25E7%259B%25AE%25E6%258E%25A9%25E7%259B%2596%25E5%25A4%25AA%25E7%25A9%25BA%25E5%2586%259B%25E4%25BA%258B%25E5%25AD%2598%25E5%259C%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpb.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
