--- a/articles/rfi/999983.md
+++ b/articles/rfi/999983.md
@@ -1,5 +1,5 @@
-<!--1713406501000-->
-[拜登要保护美国钢铁和造船业免受中国不公平竞争影响 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240417-%E6%8B%9C%E7%99%BB%E8%A6%81%E4%BF%9D%E6%8A%A4%E7%BE%8E%E5%9B%BD%E9%92%A2%E9%93%81%E5%92%8C%E9%80%A0%E8%88%B9%E4%B8%9A%E5%85%8D%E5%8F%97%E4%B8%AD%E5%9B%BD%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%E5%BD%B1%E5%93%8D)
+<!--1713438901000-->
+[所罗门可能的新总理称上台翌日即废止与中国协议](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE)
 ------
 
-<div>17/04/2024 - 21:00</div><img src="https://s.rfi.fr/media/display/73a8772a-f6f1-11ee-b8cd-005056bfb2b6/w:1280/p:16x9/2024-04-10T023842Z_2041466065_RC2VT6ATFRE2_RTRMADP_3_ISRAEL-PALESTINIANS-BIDEN.JPG"><p><strong>正在进行竞选连任的美国总统拜登17日表示将以对抗“不公平竞争”为由，敦促对中国钢铁和铝征收3倍关税。美国贸易代表办公室（USTR）也在同一天宣布将对中国在造船、海运和物流领域的贸易行为展开调查，以回应美国5个工会近期的请愿。                    </strong></p><div><p>拜登和他的竞选对手特朗普都在争夺至关重要的蓝领选民，并承诺将重振美国制造业。特朗普曾发誓: 要对中国等国家增加关税。拜登则在17日对匹兹堡的钢铁工人发表讲话，公布多项取悦钢铁工人的措施，包括将特朗普政府对中国钢铁产品征收的7.5%的关税提高到25%、向墨西哥施压禁止中国转道墨西哥向美国销售钢铁及铝产品，同时对中国在造船、海事及物流领域的贸易做法启动可能导致更高关税的反倾销调查。</p><p>白宫发表声明说：“中国对其国内钢铁和铝业的政策和补贴，意味着高品质的美国产品被以人为压低价格的中国替代品所削弱，而中国替代品生产过程的碳排放更高。”一名美国资深官员告诉媒体，中国占全球钢铁产量的一半，并以远低于美国钢铁的价格对外出口。</p><p>拜登总统宣布的对中国钢铁和铝产品提高征收关税，还有待于美国贸易代表办公室在完成对特朗普总统时期的关税进行审核后的批准。美国贸易代表戴琪（Katherine Tai）4月16日在众议院表示，她的办公室“非常接近于完成”对中国关税的审核。</p><p>据白宫17日发表的情况说明书，拜登政府宣布采取新行动，是为了保护美国钢铁和造船业免受中国不公平行为的影响。有以下五大理由：</p><p>第一：美国工人继续面临来自中国进口钢铁和铝产品的不公平竞争，这些产品是世界上排放最密集的产品之一。</p><p>第二，拜登总统上任以来，商务部已对钢铁相关产品征收30多项反倾销和反补贴税，还对中国出口商的反竞争行为以及中国等国家规避贸易规则的行为进行了近 27 项调查。</p><p>第三，拜登总统正在指示他的高级团队与墨西哥合作，共同防止中国和其他国家逃避从墨西哥进口到美国的钢铝关税。 </p><p>第四，美国贸易代表正在对中国在造船、海事和物流领域的不公平贸易行为发起调查。这项调查是在美国钢铁工人联合会（USW）和其他四个工会提交请愿书之后进行的。</p><p>第五，拜登总统正在投资清洁的美国制造钢铁。今天的公告建立在政府对绿色钢铁生产的承诺之上。</p><p>美联社评论说，拜登总统提高对中国钢铁产品进口关税的举动，反映了拜登政府的国际贸易政策，与其争取关键摇摆州选票的努力出现交集的情况。不过，白宫坚称，这更是为了保护美国制造业免受中国不公平贸易做法之害，而不仅仅是为了激发工会成员的投票热情。</p><p>有分析表示，白宫此举可能会激怒北京中南海。另外，此举的经济风险还在于：对中国钢铁及铝产品征收更高关税，将可能使钢铁与铝产品成本价格升高，也将提升汽车、建筑材料和其他关键消费者产品的成本和价格。尽管美国的高通胀已是拜登总统的政治包袱，但拜登总统转向贸易保护主义，更是与其竞争对手特朗普的政策看齐。而所谓的301条款调查则是当年特朗普政府在与北京当局贸易战中的主要工具，用来证明征收关税的合理性。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 11:05</div><img src="https://s.rfi.fr/media/display/de2f9c94-4be4-11ee-8348-005056bfb2b6/w:1280/p:16x9/Le%20port%20international%20d%27Honiara%2C%20capitale%20des%20%C3%AEles%20Salomon.JPG"><p><strong>所罗门群岛总理一职的主要候选人之一今天承诺，在可能影响该国选举的第二天，如果他上台，就废除这个太平洋小国与中国签订的地区安全协定。法新社说，中国官方媒体暗示，美国可能会策划骚乱，以阻止即将卸任的领导人重新掌权。        </strong></p><div><p>所罗门群岛总理一职的主要候选人之一，彼得·凯尼洛雷亚在马莱塔岛的村庄告诉法新社，“如果我们掌权，我们将废除与中国的安全条约。我们认为这个条约对所罗门群岛没有好处。”</p><p>周三所罗门群岛选举后，计票工作正在进行，该选举必须更新议会并选举总理，这一过程可能需要一些时间。</p><p>在这个拥有约 72 万居民、遍布数百个火山岛屿和环礁的小国举行的这次选举正受到密切关注，因为它对太平洋安全局势会有预期影响。</p><p>所罗门群岛现在的总理玛纳西·索加瓦雷 (Manasseh Sogavare) 领导所罗门群岛进入中国的轨道，并于 2022 年与北京签署了安全协议。尽管该协议的细节仍不清楚，但美国和澳大利亚担心它将为中国在南太平洋建立永久性军事基地奠定基础，这可能会改变地区安全的国际规则。</p><p>即将卸任的领导人承诺，如果再次当选，将加强与中国的关系，但他的反对者担心北京对所罗门群岛的影响，并主张与澳大利亚或美国等传统伙伴重建关系。</p><p>凯尼洛雷亚说，“我们没有天敌。” 他并对所罗门群岛已成为世界上两个最大的军事和经济大国——中国和美国——之间的争论焦点表示遗憾。他指出，“这让我们因错误的原因而臭名远扬。我们真的不需要在这里挑起不必要的紧张局势。”</p><p>据法新社今天报道称，在由身穿制服的斐济士兵和澳大利亚警察组成的国际小组的监视下，选票被卡车运送到首都霍尼亚拉一个高度保护的计票中心，这是投票面临压力的迹象。</p><p>中国官方媒体暗示，美国可能会策划骚乱，以阻止即将卸任的领导人重新掌权。美国大使安·玛丽·亚斯蒂休克称这些谣言是“公然的欺骗”。 她在一份声明中表示，“我们强烈反驳知名宣传机构关于美国国际开发署和美国政府试图影响选举的指控”。</p><p>卸任总理索加瓦雷的主要竞争对手是前联合国律师彼得·凯尼洛雷亚、人权活动家马修·韦尔和前总理经济学家戈登·达西·利洛。</p><p>然而，所罗门群岛可能要几周时间才认识他们的新总理。</p><p>选民并不直接选择他们的领导人。 他们选出代表，进行闭门谈判，组成联盟并选出领导人，这一过程可能会持续数周。</p><p>据负责选举的官员贾斯珀·阿尼西 (Jasper Anisi) 称，投票后第二天，所罗门局势平静。他说，“一切都很和平。”</p><p>所罗门之前的选举经常导致暴力。</p><p>2000年，总理巴特·乌卢法阿鲁在被心怀不满的枪手绑架后被迫辞职。</p><p>2006年，国际维和部队被部署平息选举后的暴力事件，总理斯奈德·里尼在仅仅八天后就被赶下台。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
