--- a/articles/rfi/999950.md
+++ b/articles/rfi/999950.md
@@ -1,5 +1,5 @@
-<!--1713537902000-->
-[阿根廷与北约建立伙伴关系迈出第一步](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5)
+<!--1713543301000-->
+[布林肯: 中国不能一边希望与欧洲友好 一边助长对欧洲安全的最大威胁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E5%B8%83%E6%9E%97%E8%82%AF-%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD-%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81)
 ------
 
-<div>19/04/2024 - 15:09</div><img src="https://s.rfi.fr/media/display/6f37adba-fe4d-11ee-8194-005056bf30b7/w:1280/p:16x9/le%20secr%C3%A9taire%20g%C3%A9n%C3%A9ral%20d%C3%A9l%C3%A9gu%C3%A9%20Mircea%20Geoan%C4%83re%C3%A7u%20le%20ministre%20argentin%20de%20la%20D%C3%A9fense%20Luis%20Petriau%20si%C3%A8ge%20de%20l%E2%80%99OTAN%2018042024.PNG"><p><strong>北约副秘书长吉瓦纳(Mircea Geoană)4月18日在布鲁塞尔北约总部与阿根廷国防部长佩特里(Luis Petri)会面，双方讨论了北约与阿根廷之间伙伴关系的未来发展方向。        </strong></p><div><p>据北约网站4月19日更新的声明说，北约副秘书长米尔恰-吉瓦纳先生说：“我今天非常高兴地欢迎阿根廷国防部长。阿根廷是拉丁美洲的重要一员，我欢迎该国申请成为北约的合作伙伴。北约正在与世界各国合作，促进和平与稳定。阿根廷和北约都将受益于更密切的政治和务实合作”。</p><p>两位领导人还讨论了欧洲和拉丁美洲面临的安全挑战。北约副秘书长感谢阿根廷向乌克兰提供大量人道主义援助，特别是食品和药品，以及向难民提供的帮助。</p><p>这个声明说，北约与阿根廷的政治对话始于20世纪90年代初。布宜诺斯艾利斯随后为北约领导的波黑和平支援行动做出了贡献。哥伦比亚目前是北约在拉丁美洲的唯一伙伴国。而北约与阿根廷建立任何正式伙伴关系的决定都需要其32个盟国达成共识。</p><p>另据美联社说，阿根廷周四正式申请成为北约的合作伙伴。阿根廷总统米莱（Javier Milei）领导的右翼政府正致力于加强与北约成员国的关系并吸引投资，而这一合作伙伴地位将为加强阿根廷与西方的政治和安全合作扫清道路。</p><p>据介绍，对于那些不在北约地理区域内、无需参加集体军事行动的国家来说，“合作伙伴”是一个比"盟友"更有价值的角色。北约成员国目前仅限于欧洲、土耳其、加拿大和美国。</p><p>阿根廷总统府表示，北约这一指定，可使阿根廷获得以前无法获得的先进技术、安全系统和培训。</p><p>而北约副秘书长吉瓦纳在北约总部说，"阿根廷在拉丁美洲扮演着重要的角色"。双方"更紧密的政治和务实合作将使我们双方受益"。</p><p><strong>阿根廷购买丹麦F-16战机</strong></p><p>据法新社消息，丹麦和阿根廷本周二宣布，丹麦将向阿根廷出售24架二手F-16战斗机，阿根廷称，此次购买是其"过去50年中最重要的军事采购"。</p><p>在阿根廷国防部长佩特里访问丹麦的斯克里德斯特鲁普（Skrydstrup）空军基地期间，双方正式签署了这份军购协议。今年3月份双方公布了该交易的意向声明。</p><p>据丹麦媒体报道，丹麦正在将其机队升级为更现代化的 F-35。丹麦拥有大约40架F-16，其中约 30 架正在服役。丹麦也是北约的创建国之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E9%2598%25BF%25E6%25A0%25B9%25E5%25BB%25B7%25E4%25B8%258E%25E5%258C%2597%25E7%25BA%25A6%25E5%25BB%25BA%25E7%25AB%258B%25E4%25BC%2599%25E4%25BC%25B4%25E5%2585%25B3%25E7%25B3%25BB%25E8%25BF%2588%25E5%2587%25BA%25E7%25AC%25AC%25E4%25B8%2580%25E6%25AD%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 17:33</div><img src="https://s.rfi.fr/media/display/660bc7fe-fe56-11ee-9a83-005056bf30b7/w:1280/p:16x9/AP24110423238580%20%281%29.jpg"><p><strong>七国集团（G7）在意大利卡普里岛举行外长会议，根据周五的会议最后公报，G7对中国向俄罗斯转让材料助其在乌克兰的战争机器表示"强烈关切"。        </strong></p><div><p>在周五的新闻发布会上，美国国务卿安东尼-布林肯指责中国间接"助长"了在乌克兰的冲突。布林肯说：“中国如果一方面希望与欧洲和其他国家保持友好关系，就不能另一方面助长冷战结束以来对欧洲安全的最大威胁”。</p><p>据美国外交人士称，布林肯是在一次专门讨论支持乌克兰抵抗俄罗斯入侵的工作会议上表达了对中国向俄罗斯提供军民两用产品支持问题的担忧，并表示支持两年多来一直与俄罗斯军队作战的乌克兰。</p><p>法新社4月19日报道，G7外长"在会议结束时发表的公报中说："我们对中国公司向俄罗斯转让军民两用材料和武器部件深表关切，俄罗斯正利用这些材料和部件提高其军事生产。</p><p>G7外长指出，中国的转让使俄罗斯得以重建和振兴其国防工业，对乌克兰和国际和平与安全构成威胁"，他们对此表示遗憾。</p><p>G7敦促"中国因该确保停止这种支持，因为这将延长冲突，增加俄罗斯对其邻国的威胁"。</p><p>七国集团由美国、日本、加拿大、法国、德国和今年担任轮值主席国的意大利组成。</p><p>该报道说，特别是，美国人希望欧洲国家能向中国政府施压，迫使其减少对俄罗斯的军事支持，因为华盛顿自己也承认，俄罗斯军队正在乌克兰领土上占据优势。</p><p>美国说，几个月来，它一直在目睹中国向俄罗斯转让装备，莫斯科正利用这些装备重建其国防工业，这在乌克兰战场上得到了反映。</p><p>华盛顿给中国划定了一条红线，即不得直接提供武器给俄罗斯用于乌克兰战争--迄今为止还没有看到相反的证据。</p><p>但在中俄关系加深的背景下，美国越来越多地谴责北京通过“迂回渠道”支持俄罗斯，并将中国这些支持与俄罗斯在乌克兰的战争建立直接的关联。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX2N.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E5%25B8%2583%25E6%259E%2597%25E8%2582%25AF-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25B8%258D%25E8%2583%25BD%25E4%25B8%2580%25E8%25BE%25B9%25E5%25B8%258C%25E6%259C%259B%25E4%25B8%258E%25E6%25AC%25A7%25E6%25B4%25B2%25E5%258F%258B%25E5%25A5%25BD-%25E4%25B8%2580%25E8%25BE%25B9%25E5%258A%25A9%25E9%2595%25BF%25E5%25AF%25B9%25E6%25AC%25A7%25E6%25B4%25B2%25E5%25AE%2589%25E5%2585%25A8%25E7%259A%2584%25E6%259C%2580%25E5%25A4%25A7%25E5%25A8%2581%25E8%2583%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAX2N.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAX2N.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX2N.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
