--- a/articles/rfi/999956.md
+++ b/articles/rfi/999956.md
@@ -1,5 +1,5 @@
-<!--1713494701000-->
-[马克龙将在索邦大学阐述欧洲建设蓝图](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240418-%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE)
+<!--1713541502000-->
+[七国集团：乌克兰需更多防空支援](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2-%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4)
 ------
 
-<div>18/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/e83356da-fdc4-11ee-a404-005056bf30b7/w:1280/p:16x9/1210255_f9d58008605d47c681b8e6106950b050-0-9bdf4d006d41448fb01c2420a3c54c68.png"><p><strong></strong></p><div><p>2017年9月26日，马克龙曾在巴黎索邦大学发表演讲，提出一系列重塑欧盟的建议主张，希望在今后几年建立一个“主权、统一和民主的欧盟”。马克龙认为，欧盟当前面临许多重大挑战，在防务安全、移民问题、发展问题、气候变化、数字革命和全球经济一体化等方面都需要作出重大政策调整。为此，马克龙提出了一系列具体建议。</p><p>针对日益严重的恐怖主义威胁，马克龙主张建立欧盟统一的防务安全体系，在2020年前建立一支欧盟共同干预部队，设立欧盟统一防务预算、欧盟反恐检察部门和情报共享机制。马克龙认为，欧盟共同干预部队是对北约的一个补充，但是需要有独立的行动能力。</p><p>马克龙还向欧盟发出了充满活力的呼吁，称欧盟多年来缺乏长期愿景，深陷官僚主义和过度监管的泥潭。 他在长达一个半小时的演讲中表示，欧洲“太弱、太慢、太低效”。 对欧盟的这一呼吁令许多合作伙伴感到惊讶，首先是德国前总理默克尔(Angela Merkel)，当时她刚刚再次当选，进行了数月的谈判才组建了政府联盟。</p><p>在欧洲议会选举上，执政党领军人远远落后于极右派。4月初，法国伊佛普民调机构调查显示，极右翼国民联盟的巴德拉(Jordan Bardella)继续领先，支持率超过30%，远远领先于他的主要竞争对手执政的复兴党海耶尔(Valérie Hayer)。</p><p>近来，海耶尔的支持率不但没有上升，反从此前的19%下降到18%左右，与极右派的国民联盟差距拉大，显示海耶尔在欧盟议会竞选开始时采取的旨在攻击国民联盟的策略并没有奏效，也没有引发公众舆论的共鸣。</p><p>索邦大学二次演讲也有揭露极右虚伪一面的意图。法国总统马克龙回答记者提问时并没有提及极右派。马克龙表示：“我认为，我们目前正在经历很多恐惧和担忧，不加思考的简单回应有时候会满足愤世嫉俗的群体”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240418-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E5%25B0%2586%25E5%259C%25A8%25E7%25B4%25A2%25E9%2582%25A6%25E5%25A4%25A7%25E5%25AD%25A6%25E9%2598%2590%25E8%25BF%25B0%25E6%25AC%25A7%25E6%25B4%25B2%25E5%25BB%25BA%25E8%25AE%25BE%25E8%2593%259D%25E5%259B%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE%20-%20https%3A%2F%2Frfi.my%2FAWt6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE%20-%20https%3A%2F%2Frfi.my%2FAWt6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 22:59</div><img src="https://s.rfi.fr/media/display/6384d6b2-f1e3-11ee-bf58-005056bfb2b6/w:1280/p:16x9/2024-04-03T152832Z_1197154583_RC23Z6A28JCI_RTRMADP_3_NATO-FOREIGN.JPG"><p><strong></strong></p><div><p>德国总理朔尔茨出访中国前与遭受俄罗斯入侵的乌克兰总统泽连斯基通电话，告知德国计划追加提供6个美制爱国者地空导弹系统到给乌克兰。</p><p>乌克兰外长库列巴18日在意大利卡普里岛呼吁七国集团应该像对以色列那样向乌克兰提供更多的防空系统。库列巴认为西方国家对以色列和乌克兰采取了两种不同的策略。目前美国等七国集团国家的外长正在卡普里岛举行会议。</p><p>七国集团（G7）部长们4月18日在意大利卡普里岛进行第二天会谈，首先讨论中东危机，下午将把注意力转向乌克兰，北约首脑和乌克兰外交部长也参与其中。</p><p>欧盟外交政策负责人博雷尔敦促欧盟国家提供防空系统，帮助乌克兰保护城市免受俄罗斯的攻击，否则乌克兰的电力系统将被摧毁。“没有一个国家可以在住家、工厂和网络等都失去电力的情况下进行战斗。”</p><p>乌克兰外交部长库列巴说，西方对以色列的态度与乌克兰不同，当伊朗袭击以色列时，美国和盟友协助击落了这些导弹和无人机。“以色列的合作伙伴战略似乎是防止损害和死亡……在过去的几个月里，乌克兰的合作伙伴战略则是帮助乌克兰从损害中重振。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtG.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E4%25B8%2583%25E5%259B%25BD%25E9%259B%2586%25E5%259B%25A2-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E9%259C%2580%25E6%259B%25B4%25E5%25A4%259A%25E9%2598%25B2%25E7%25A9%25BA%25E6%2594%25AF%25E6%258F%25B4&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtG.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
