--- a/articles/rfi/999957.md
+++ b/articles/rfi/999957.md
@@ -1,5 +1,5 @@
-<!--1713494701000-->
-[伊朗袭击以色列后 中俄联合支持德黑兰对抗华盛顿](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240418-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E-%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF)
+<!--1713537902000-->
+[阿根廷与北约建立伙伴关系迈出第一步](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5)
 ------
 
-<div>18/04/2024 - 20:12</div><img src="https://s.rfi.fr/media/display/07af6fa4-fc93-11ee-8851-005056a97e36/w:1280/p:16x9/e1d8ce33b89d57ff07354d9cb2a904726a60f587.jpg"><p><strong>莫斯科和北京并未谴责伊朗对以色列领土的袭击，但他们将这场危机视为挑拨西方与世界其他国家之间关系的机会。这是世界报的两名莫斯科特派记者勒梅特及维特金共同撰写报道指出的。         </strong></p><div><p>在伊朗与以色列之间的危机中，在大多数国家一致呼吁克制的背后，俄罗斯和中国外交立场却是坚决站在伊朗一边。 </p><p style="text-align:left">莫斯科和北京都没有谴责德黑兰在4月13日星期六晚上至4月14日星期日发动的大规模空袭。 相反，中国外交部长王毅周一与伊朗外长侯赛因·阿米尔·阿卜杜拉希安通电话提醒说，“中方强烈谴责并坚决反对针对伊朗驻大马士革使馆领事部的袭击事件”(发生在4月1日)，这是根据中国官方媒体新华社发布的这项谈话报道。 </p><p style="text-align:left">另一方面，北京“注意到伊朗的声明，即所采取的行动是有限的，并构成自卫行为”。 弗拉基米尔·普京周二(16日也指出，在与伊朗外长易卜拉欣·拉伊西的通话中，伊朗展现了希望“避免局势进一步升级”的意愿。 </p><p style="text-align:left">俄罗斯常驻联合国代表瓦西里·内本齐亚(Vassilyi Nebenzia)前一天已经提到伊朗的“合法回应”，并倾向于强调西方在此事上的“虚伪”。俄罗斯外交发言人玛丽亚·扎哈罗娃对以色列驻莫斯科大使西蒙娜·加尔佩林说：“西蒙娜，请您提醒我何时以色列谴责了基辅政权对俄罗斯领土的袭击。” </p><p style="text-align:left">俄罗斯的宣传渠道甚至对伊朗的袭击表现出某种形式的兴奋，首先描述了德黑兰的“胜利”和以色列的“恐慌”，然后采用了系列词句：“有限打击”具有简单的“警告”意义。 NTV 频道周一表示：“伊朗已成为穆斯林世界的重心，” </p><p style="text-align:left">伊朗是莫斯科的重要盟友： 在所采取的这些态度立场上 </p><p style="text-align:left">不仅仅是对于重要合作伙伴展现出很好的举止。 伊朗是莫斯科在对乌克兰战争中的重要盟友，并向俄罗斯提供无人机和导弹。  </p><p style="text-align:left">伊朗也是北京的主要石油供应国之一，北京一直反对对德黑兰实施制裁。 3月中旬，中国、俄罗斯、伊朗三国仍在阿拉伯海进行联合军事演习。 </p><p style="text-align:left">俄罗斯和中国的立场首先与 2023 年 10 月 7 日哈马斯袭击以色列后所做出的转变一致，中俄两国拖到很晚才谴责以色列，而且往往措辞含糊。  </p><p style="text-align:left">自此，北京在中东事务上极力采取与美国和七国集团截然相反的立场，自诩为“南方国家”的代言人。 </p><p style="text-align:left">正是以与西方面对面的名义，莫斯科牺牲了与以色列的良好关系以及迄今为止以平衡为考量的地区政策。  </p><p style="text-align:left">乌克兰战争是俄罗斯的绝对优先要务，中东的紧张局势是透过这个棱镜来分析的。  </p><p style="text-align:left">这种紧张情势是在西方与世界其他国家之间制造隔阂的一种手段，希望看到西方的注意力和资源分散，从而损害基辅。 对此，媒体援引俄罗斯分析师的话说，紧张局势的升级可能导致能源价格上涨，这对俄罗斯经济有利。 </p><p style="text-align:left">然而，失控的大火对于莫斯科和北京都没有任何好处。该地区不仅对中国的能源供应至关重要，而且没有任何迹象表明伊朗政权将会抵御过于残酷的震荡和冲击。反过来看，这个问题也适用于莫斯科在该地区的主要支持的对象--大马士革。 军事升级还可能削弱德黑兰向莫斯科供应武器的能力。 </p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWsJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240418-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2590%258E-%25E4%25B8%25AD%25E4%25BF%2584%25E8%2581%2594%25E5%2590%2588%25E6%2594%25AF%25E6%258C%2581%25E5%25BE%25B7%25E9%25BB%2591%25E5%2585%25B0%25E5%25AF%25B9%25E6%258A%2597%25E5%258D%258E%25E7%259B%259B%25E9%25A1%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF%20-%20https%3A%2F%2Frfi.my%2FAWsJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF%20-%20https%3A%2F%2Frfi.my%2FAWsJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWsJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 15:09</div><img src="https://s.rfi.fr/media/display/6f37adba-fe4d-11ee-8194-005056bf30b7/w:1280/p:16x9/le%20secr%C3%A9taire%20g%C3%A9n%C3%A9ral%20d%C3%A9l%C3%A9gu%C3%A9%20Mircea%20Geoan%C4%83re%C3%A7u%20le%20ministre%20argentin%20de%20la%20D%C3%A9fense%20Luis%20Petriau%20si%C3%A8ge%20de%20l%E2%80%99OTAN%2018042024.PNG"><p><strong>北约副秘书长吉瓦纳(Mircea Geoană)4月18日在布鲁塞尔北约总部与阿根廷国防部长佩特里(Luis Petri)会面，双方讨论了北约与阿根廷之间伙伴关系的未来发展方向。        </strong></p><div><p>据北约网站4月19日更新的声明说，北约副秘书长米尔恰-吉瓦纳先生说：“我今天非常高兴地欢迎阿根廷国防部长。阿根廷是拉丁美洲的重要一员，我欢迎该国申请成为北约的合作伙伴。北约正在与世界各国合作，促进和平与稳定。阿根廷和北约都将受益于更密切的政治和务实合作”。</p><p>两位领导人还讨论了欧洲和拉丁美洲面临的安全挑战。北约副秘书长感谢阿根廷向乌克兰提供大量人道主义援助，特别是食品和药品，以及向难民提供的帮助。</p><p>这个声明说，北约与阿根廷的政治对话始于20世纪90年代初。布宜诺斯艾利斯随后为北约领导的波黑和平支援行动做出了贡献。哥伦比亚目前是北约在拉丁美洲的唯一伙伴国。而北约与阿根廷建立任何正式伙伴关系的决定都需要其32个盟国达成共识。</p><p>另据美联社说，阿根廷周四正式申请成为北约的合作伙伴。阿根廷总统米莱（Javier Milei）领导的右翼政府正致力于加强与北约成员国的关系并吸引投资，而这一合作伙伴地位将为加强阿根廷与西方的政治和安全合作扫清道路。</p><p>据介绍，对于那些不在北约地理区域内、无需参加集体军事行动的国家来说，“合作伙伴”是一个比"盟友"更有价值的角色。北约成员国目前仅限于欧洲、土耳其、加拿大和美国。</p><p>阿根廷总统府表示，北约这一指定，可使阿根廷获得以前无法获得的先进技术、安全系统和培训。</p><p>而北约副秘书长吉瓦纳在北约总部说，"阿根廷在拉丁美洲扮演着重要的角色"。双方"更紧密的政治和务实合作将使我们双方受益"。</p><p><strong>阿根廷购买丹麦F-16战机</strong></p><p>据法新社消息，丹麦和阿根廷本周二宣布，丹麦将向阿根廷出售24架二手F-16战斗机，阿根廷称，此次购买是其"过去50年中最重要的军事采购"。</p><p>在阿根廷国防部长佩特里访问丹麦的斯克里德斯特鲁普（Skrydstrup）空军基地期间，双方正式签署了这份军购协议。今年3月份双方公布了该交易的意向声明。</p><p>据丹麦媒体报道，丹麦正在将其机队升级为更现代化的 F-35。丹麦拥有大约40架F-16，其中约 30 架正在服役。丹麦也是北约的创建国之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E9%2598%25BF%25E6%25A0%25B9%25E5%25BB%25B7%25E4%25B8%258E%25E5%258C%2597%25E7%25BA%25A6%25E5%25BB%25BA%25E7%25AB%258B%25E4%25BC%2599%25E4%25BC%25B4%25E5%2585%25B3%25E7%25B3%25BB%25E8%25BF%2588%25E5%2587%25BA%25E7%25AC%25AC%25E4%25B8%2580%25E6%25AD%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
