--- a/articles/rfi/999960.md
+++ b/articles/rfi/999960.md
@@ -1,5 +1,5 @@
-<!--1713476702000-->
-[中美贸易战阴云乱 台美贸易谈判向前看 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240418-%E4%B8%AD%E7%BE%8E%E8%B4%B8%E6%98%93%E6%88%98%E9%98%B4%E4%BA%91%E4%B9%B1-%E5%8F%B0%E7%BE%8E%E8%B4%B8%E6%98%93%E8%B0%88%E5%88%A4%E5%90%91%E5%89%8D%E7%9C%8B)
+<!--1713532502000-->
+[美国宇航局长揭露中国以民用计划之名掩盖军事太空计划 - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240419-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E9%95%BF%E6%8F%AD%E9%9C%B2%E4%B8%AD%E5%9B%BD%E4%BB%A5%E6%B0%91%E7%94%A8%E8%AE%A1%E5%88%92%E4%B9%8B%E5%90%8D%E6%8E%A9%E7%9B%96%E5%86%9B%E4%BA%8B%E5%A4%AA%E7%A9%BA%E8%AE%A1%E5%88%92)
 ------
 
-<div>18/04/2024 - 21:21</div><img src="https://s.rfi.fr/media/display/da2a9e26-fb17-11ea-875a-005056bff430/w:1280/p:16x9/2020-09-20T073526Z_1670149232_RC272J9D8GQZ_RTRMADP_3_TAIWAN-JAPAN-CHINA.JPG"><p><strong>针对美国政府计划将中国钢铝产品的关税提高百分之二十五，中国商务部4月18日批评美方“转嫁矛盾”的做法是“一错再错”。中美贸易战火药味又一次散布全球之时，台美间的贸易谈判却前景乐观，且一直按部就班地向前发展。                    </strong></p><div><p>美国总统拜登17日向美国钢铁工人联合会（United Steelworkers）会员发表演讲，批评中国政府高额大量补贴，导致中国以不公平的低价向全球市场倾销远超过自身需求的钢铁。 他批评，早在2000年代初，宾州及俄亥俄州的钢铁产业就因此受到严重打击。 拜登指出，美国贸易代表戴琪（Katherine Tai）正在调查中国政府在钢铁和铝方面的贸易行为，如果证实有反竞争的情形，他会敦促戴琪将中国钢、铝税率提高到25%， 而目前这些产品的关税仅有7.5%，或根本不加征关税。</p><p><strong>中国商务部批美错上加错</strong></p><p>中国商务部官网18日晚以不具名的发言人名义，就此事回应称，美方对中国的指责“没有事实依据”，相关措施是典型的“单边主义、保护主义”做法，中方对此坚决反对。 发言人说，2018年以来，美国以“国家安全”之名，对全球贸易伙伴钢铝产品选择性加征关税，还以此胁迫贸易伙伴接受不公平条件。 美方相关措施已被世贸组织裁定违反世贸规则。</p><p>中国商务部发言人声称，美方无视国际经贸秩序和规则，将经贸问题政治化，“滥用所谓301关税复审程序，公开要求随意调整对中国产品关税，转嫁矛盾，是一错再错，也无助 于解决美国内产业面临的问题”。 美国施压别国限制中国产品，更将破坏全球产业链供应链的安全稳定。</p><p>该发言人表示，中方敦促美方正视自身问题，停止提高对中国产品关税，并立即取消对中国加征关税措施。 中方将采取一切必要措施，捍卫自身权益。</p><p><strong>台美贸易谈判向前看</strong></p><p>当中国大陆面临与美国的又一次贸易战阴云的时候，台湾与美国的经贸关系不断稳步向前。</p><p>台美去年6月在华盛顿签署了21世纪贸易倡议首批协定，涵盖关务行政及贸易便捷化、良好法制作业、服务业国内规章、反贪腐、中小企业等5项议题。第二阶段谈判将聚焦农业、劳动与环境3大议题，作业持续进行中。</p><p>美国贸易代表署应美国国会的要求公开了谈判3大议题的拟议文本，内容涉及食品安全、环境正义及远洋移工权益。美方建议提升农产品进口许可程序及认证要求的透明度，也要提高环境保护水准和移工劳权等领域议题。但这些都是双方讨论过程中有共识，或早已是台湾目标愿景。 比如，美方关心远洋渔船上的工作条件，台湾在渔业与人权行动计画（Action Plan for Fisheries and Human Rights）中也有相关规范。</p><p>台湾谈判官员认为，台美21世纪贸易倡议第二阶段谈判整体方向没有问题，正持续分组、分议题密集举行会前会，只是内容牵涉细节法规，必须一步步往前，需要一定时间，未来实体谈判将在台湾举行，但时间未定。</p><p><strong>台美 台英 台加三项贸易投资协议</strong></p><p>过去台湾只与新加坡、新西兰和有关邦交国之间存在自由贸易协定，数量偏低并在国际贸易整合上处境孤立。但继去年6月“台美21世纪贸易倡议”（U.S.-Taiwan Initiative on 21st-Century Trade）首批协定签署后，台湾去年11月与英国签署“深化贸易伙伴关系协议”（Enhanced Trade Partnership Arrangement）， 去年12月则与加拿大签署“投资促进及保障协议”（Foreign Investment Promotion and Protection Arrangement）。</p><p>台湾方面认为：如果台美避免双重课税协定也能完成，将对台美双边经贸打下更坚定基础。台湾也希望强化与澳洲和印度的贸易伙伴关系，因为印度和台湾具备持续推动贸易协议的基础。台湾投资将有助印度发展其制造业基础设施。印度正与中国竞争全球制造中心的地位，对台湾来说，这代表有加强 商业合作的机会。</p><p><strong>蔡英文期望：未来台湾能加入跨太平洋伙伴全面进步协定（CPTPP）</strong></p><p>今年3月7日，台湾总统蔡英文出席任内最后一次外交部新春联欢晚会时表示：过去8年政府积极改善基础建设、厚植国力，吸引外商投资台湾，协助产业布局全球，台湾与美国、日本、欧洲及新南向国家的经贸往来大幅成长。</p><p>她也特别指出：去年完成了签署台美21世纪贸易倡议首批协定，也和英国、加拿大分别签署提升贸易伙伴关系协议及投资促进及保障协议。她期待：未来台湾能加入跨太平洋伙伴全面进步协定（CPTPP） ，继续加强与全球经贸连结。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div>
+<div>19/04/2024 - 14:34</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>法国总理阿塔尔任职100天，周四晚间做客24小时滚动新闻台BFMTV，详细阐述了任职后的作为，并承诺将对一些年轻人的“暴力”行为迅速做出反应；欧洲选举日益迫近，法国北部一些地区的民众却漠不关心；乌克兰向国际社会发出紧急救援的呼声；欧洲电动汽车销售遇挫，三月份下滑11%，中国竞争威胁迫在眉睫；这是19日出版的法国各报开篇新闻话题。                    </strong></p><div><p>关于中国，《费加罗报》揭示美国宇航局局长为中国的太空军事能力拉响警钟；《回声报》则报道了中国奇瑞汽车在西班牙建厂的消息。另外，印度迎来全球规模最大的选举，则是多份日报关注的亚洲新闻重点。</p><p><strong>尼尔森为中国的太空军事能力拉响警钟</strong></p><p>美国宇航局局长尼尔森星期三（4月17日）在众议院拨款委员会针对航天局2025年预算发言，对中国近年来在太空领域取得的巨大进步深表担忧。尼尔森指责中国继续增强其太空能力，并以民用计划的名义掩盖军事太空计划。美国宇航局局长强调：美中之间目前正在进行一场“竞赛”，美国必须先于中国成功登陆月球。因为他担心：一旦中国率先登陆，则可能宣称“月球为其领土”。尼尔森表示：中国在这方面投入了大量资金。美国“真的不应该放松警惕”。</p><p>美国计划于2026年通过阿尔忒弥斯3号任务将宇航员送上月球。</p><p>中国也计划在2030年之前将人类送往月球。美国民选官员在向美国航天局提出年度预算请求期间听取了尼尔森的表述。</p><p><strong>中国奇瑞在巴塞罗纳建厂</strong></p><p>另外，欧洲电动汽车市场出现低迷，随着各国收紧电动车补贴政策，3月份欧洲电动汽车销售下降11%。与此同时，中国奇瑞新能源星期二（4月16日）宣布：与西班牙埃布罗（Ebro-EV Motors）公司在巴塞罗纳成立一家合资企业，厂址选在2021年底关闭的前日产汽车旧址，计划将工厂改造为电动汽车中心。</p><p>《回声报》指出：中国奇瑞新能源加速进军欧洲，希望在欧洲发展销售业务，成为第一家在欧洲设厂的中国电动汽车企业。</p><p>这家由西班牙埃布罗占多数股权的合资企业承诺，在现有基础设施再利用的基础上，将于今年第四季度末开始生产。</p><p>报道指出：通过在欧洲建厂，奇瑞公司面临巨大挑战。这家原本注重低端市场的制造商，打算推出新的品牌重塑形象。同时为了更快地在激烈的竞争中找到一席之地，奇瑞准备以极具吸引力的价格打响市场争夺战。</p><p><strong>印度：最大规模的选举</strong></p><p>此外，多份日报聚焦今天开始的印度议会下院选举。报道指出：全球最大规模的选举-印度议会下院选举19日正式拉开帷幕。公众舆论和观察家一致认为：即将卸任的总理穆迪领导的印度人民党将赢得多数席位。根据3月6日公布的民意调查，75%的选民对穆迪表示支持。随着第二个五年任期的结束，穆迪的民意支持率一年内跃升了8个百分点。</p><p>不过，印度总理治理工作中也存在诸多不足。比如：在新冠病毒大流行期间显露出管理不善，导致印度成为全球受该病毒影响最严重的国家，死亡人数超过400万。还有，在中印两国军队在喜马拉雅山西部的冲突中表现不力，未能有效地阻止中国军队占领大片富有争议的边境地带。</p><p>从经济层面看，尽管印度年增长率约为7%，但失业和就业不足仍是印度面临的最大挑战。国际劳工组织在3月份公布的一份报告中强调，2012至2022十年间，印度经济每年仅能为进入就业市场的1200万年轻人创立500万个就业机会。这场社会危机每年迫使超过10万民众非法移民。</p><p>印度总理穆迪执政十年还广得民心，是他以人民的无私公仆的形象维持的声望。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%B5%81%E8%8A%B3/" title="流芳">流芳</a></div></div></div></div>
