--- a/articles/rfi/999962.md
+++ b/articles/rfi/999962.md
@@ -1,5 +1,5 @@
-<!--1713476702000-->
-[竞争力落后美中    欧盟27国共商对策](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD-%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96)
+<!--1713494701000-->
+[所罗门群岛反对派总理角逐者重申若当选将废除与中国的安全协议](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240418-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE)
 ------
 
-<div>18/04/2024 - 22:57</div><img src="https://s.rfi.fr/media/display/0d312ef6-fd9a-11ee-a885-005056bfb2b6/w:1280/p:16x9/AP24109325782154.jpg"><p><strong></strong></p><div><p>莱塔的报告提出了一系列改善内部市场运作的措施，包括进一步整合电信、能源和金融部门，否则欧盟将注定衰落。随着欧洲议会选举临近，这个问题有望成为未来几个月欧洲政治议程的核心。</p><p>欧盟委员会主席乌苏拉·冯德莱恩表示，“我们联盟的竞争力和单一市场有坚实的基础，我们现在必须将其转变为长期可持续增长”。</p><p>德国官员认为，欧盟必须确保欧洲人不是简单的“其他地方生产的数字技术和服务的消费者”，并呼吁采取具体行动刺激资本获取、降低能源成本、解决熟练劳动力短缺问题并加强贸易联系。</p><p>提交了一份长达147页的报告后，恩里科·莱塔（Enrico Letta）在新闻发布会上表示，“这是最后一次机会，也是最后一个开放的窗口。”</p><p>报告称，地缘政治紧张局势和保护主义的抬头威胁着欧盟的经济安全，并削弱了其在人工智能和清洁技术等技术领域的发展。</p><p>欧盟面临着美国巨额补贴吸引投资以及中国对其所依赖的新技术供应链的主导地位带来的新挑战。</p><p>根据草案结论，欧盟领导人将制定九点计划，包括深化单一市场、创建资本市场和能源联盟。</p><p>最大的问题是欧盟的行动是否言行一致。 资本市场联盟的计划可以追溯到十年前，该计划可以释放双重转型所需的私人资金，但由于欧盟成员国不想放弃对国家金融规则的控制而陷入停滞。</p><p>中国欧盟商会主席彦辞警告，随着保护主义浪潮高涨，中国和欧洲面临“慢动作火车事故”，双方之间的贸易摩擦有可能演变成一场全面的贸易战。</p><p>彦辞4月17日在出席中国欧盟商会华南分会的一次会议时说，尽管中国和欧洲对彼此的一些贸易担忧是合理的，但如果中欧领导人不加强对话，就可能出现无益的脱钩。</p><p>彦辞说，欧洲不能接受构成欧洲工业基础的产业，因价格过高被挤出市场的事实，“那时贸易就成为一个安全问题，我认为这在中国可能还没有得到充分的重视”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E7%25AB%259E%25E4%25BA%2589%25E5%258A%259B%25E8%2590%25BD%25E5%2590%258E%25E7%25BE%258E%25E4%25B8%25AD-%25E6%25AC%25A7%25E7%259B%259F27%25E5%259B%25BD%25E5%2585%25B1%25E5%2595%2586%25E5%25AF%25B9%25E7%25AD%2596&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWtD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWtD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:49</div><img src="https://s.rfi.fr/media/display/a21e0674-fcaf-11ee-8e20-005056bfb2b6/w:1280/p:16x9/AP24106049916145.jpg"><p><strong></strong></p><div><p>中国资助了多个重大项目，包括一座可容纳一万个座位的体育场和一座仍在建设中的医疗中心。</p><p>61 岁的罗伯特·巴拉 (Robert Bara) 住在首都附近一个泥泞的山谷里的村庄里，他担心没有足够的钱送孩子们上学。 他在前往一座用作投票站的教堂投票时说道：“我必须在经济上支持他们”。</p><p>组织这样的投票对这个群岛来说是一个挑战，这个拥有约 72 万居民的国家分布在数百个火山岛屿和环礁上，投票箱和选票是通过船只、飞机和直升机运送的。</p><p>来自澳大利亚、新西兰和巴布亚新几内亚的警察协助当地执法。</p><p>为了应对可能发生的暴力事件，位于霍尼亚拉市中心的中国大使馆本周在大楼前匆忙竖起了临时钢栅栏。</p><p>这是所罗门群岛自2019年与台湾断绝外交关系以来的首次选举。</p><p>所罗门群岛在总理玛纳西·索加瓦雷 (Manasseh Sogavare) 2019年上台，将所罗门群岛的外交关系从台湾转向北京。索加瓦雷于 2022 年与北京签署了一项秘密安全协议。</p><p>尽管该协议的细节仍不清楚，但华盛顿和堪培拉担心它将为中国在南太平洋建立永久性军事基地奠定基础，这可能会改变地区安全的游戏规则。</p><p>玛纳西·索加瓦雷的主要竞争对手之一是前联合国律师彼得·凯尼洛里，他希望挑战与中国的协议。 其他反对派人物包括人权活动家马修·韦尔和前总理、经济学家戈登·达西·利洛。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E5%258F%258D%25E5%25AF%25B9%25E6%25B4%25BE%25E6%2580%25BB%25E7%2590%2586%25E8%25A7%2592%25E9%2580%2590%25E8%2580%2585%25E9%2587%258D%25E7%2594%25B3%25E8%258B%25A5%25E5%25BD%2593%25E9%2580%2589%25E5%25B0%2586%25E5%25BA%259F%25E9%2599%25A4%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E7%259A%2584%25E5%25AE%2589%25E5%2585%25A8%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWt8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWt8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
