--- a/articles/rfi/999963.md
+++ b/articles/rfi/999963.md
@@ -1,5 +1,5 @@
-<!--1713476702000-->
-[前中国央行副行长范一飞涉贿受审](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1)
+<!--1713494701000-->
+[马克龙将在索邦大学阐述欧洲建设蓝图](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240418-%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE)
 ------
 
-<div>18/04/2024 - 17:14</div><img src="https://s.rfi.fr/media/display/f3fb03a4-0d6f-11ea-b03f-005056bfe576/w:1280/p:16x9/2011-08-11T800-CHINA-YUAN-MIDDAY_0.JPG"><p><strong>遭指“靠金融吃金融”的前中国人民银行（中国央行）副行长范一飞，被控自1993年起，29年内非法收受财物共计折合人民币3.86亿余元。湖北省黄冈市中级人民法院18日公开审理范一飞受贿一案。        </strong></p><div><p>据中央社今天引述中国官方消息，湖北省黄冈市人民检察院起诉指控，1993年至2022年，范一飞利用在前中国人民建设银行信托投资公司任职，在中国建设银行官至副行长，担任中国投资有限责任公司副总经理兼上海银行董事长，及中国人民银行党委委员、副行长等职务上的便利，透过其他国家工作人员职务上的行为，为有关单位和个人在贷款融资、业务承揽、工作调动等事项上提供帮助，直接或者通过其特定关系人非法收受财物共计折合3.86亿余元。</p><p>消息说，范一飞当庭表示认罪悔罪。</p><p>法庭宣布择期宣判。</p><p>北京青年报旗下新媒体“政知见”指出，范一飞长期在金融系统任职，2015年调往中国人行担任副行长时，是当时央行领导班子中最年轻的成员。2022年11月，范一飞在任上被查落马。2023年5月，他被开除党籍和公职。</p><p>据中共中央纪委国家监委的通报指出，范一飞为官不廉，毫无法纪底线且胆大妄为，靠金融吃金融、以钱生钱，长期以“投资”为名大搞权钱交易，利用职务便利为他人在贷款融资、企业经营等方面谋利，并非法收受巨额财物。</p><p>该报道称，今年1月上旬，中国央视播出年度反腐大片“持续发力纵深推进”，范一飞还出镜忏悔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWqH.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E5%2589%258D%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A4%25AE%25E8%25A1%258C%25E5%2589%25AF%25E8%25A1%258C%25E9%2595%25BF%25E8%258C%2583%25E4%25B8%2580%25E9%25A3%259E%25E6%25B6%2589%25E8%25B4%25BF%25E5%258F%2597%25E5%25AE%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1%20-%20https%3A%2F%2Frfi.my%2FAWqH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1%20-%20https%3A%2F%2Frfi.my%2FAWqH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWqH.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/e83356da-fdc4-11ee-a404-005056bf30b7/w:1280/p:16x9/1210255_f9d58008605d47c681b8e6106950b050-0-9bdf4d006d41448fb01c2420a3c54c68.png"><p><strong></strong></p><div><p>2017年9月26日，马克龙曾在巴黎索邦大学发表演讲，提出一系列重塑欧盟的建议主张，希望在今后几年建立一个“主权、统一和民主的欧盟”。马克龙认为，欧盟当前面临许多重大挑战，在防务安全、移民问题、发展问题、气候变化、数字革命和全球经济一体化等方面都需要作出重大政策调整。为此，马克龙提出了一系列具体建议。</p><p>针对日益严重的恐怖主义威胁，马克龙主张建立欧盟统一的防务安全体系，在2020年前建立一支欧盟共同干预部队，设立欧盟统一防务预算、欧盟反恐检察部门和情报共享机制。马克龙认为，欧盟共同干预部队是对北约的一个补充，但是需要有独立的行动能力。</p><p>马克龙还向欧盟发出了充满活力的呼吁，称欧盟多年来缺乏长期愿景，深陷官僚主义和过度监管的泥潭。 他在长达一个半小时的演讲中表示，欧洲“太弱、太慢、太低效”。 对欧盟的这一呼吁令许多合作伙伴感到惊讶，首先是德国前总理默克尔(Angela Merkel)，当时她刚刚再次当选，进行了数月的谈判才组建了政府联盟。</p><p>在欧洲议会选举上，执政党领军人远远落后于极右派。4月初，法国伊佛普民调机构调查显示，极右翼国民联盟的巴德拉(Jordan Bardella)继续领先，支持率超过30%，远远领先于他的主要竞争对手执政的复兴党海耶尔(Valérie Hayer)。</p><p>近来，海耶尔的支持率不但没有上升，反从此前的19%下降到18%左右，与极右派的国民联盟差距拉大，显示海耶尔在欧盟议会竞选开始时采取的旨在攻击国民联盟的策略并没有奏效，也没有引发公众舆论的共鸣。</p><p>索邦大学二次演讲也有揭露极右虚伪一面的意图。法国总统马克龙回答记者提问时并没有提及极右派。马克龙表示：“我认为，我们目前正在经历很多恐惧和担忧，不加思考的简单回应有时候会满足愤世嫉俗的群体”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240418-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E5%25B0%2586%25E5%259C%25A8%25E7%25B4%25A2%25E9%2582%25A6%25E5%25A4%25A7%25E5%25AD%25A6%25E9%2598%2590%25E8%25BF%25B0%25E6%25AC%25A7%25E6%25B4%25B2%25E5%25BB%25BA%25E8%25AE%25BE%25E8%2593%259D%25E5%259B%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE%20-%20https%3A%2F%2Frfi.my%2FAWt6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE%20-%20https%3A%2F%2Frfi.my%2FAWt6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
