--- a/articles/rfi/999967.md
+++ b/articles/rfi/999967.md
@@ -1,5 +1,5 @@
-<!--1713444302000-->
-[拜登昨晚大批中国钢铁排外与作弊 发言人林剑今早冷问是否说美国自己](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A-%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1)
+<!--1713476702000-->
+[中美贸易战阴云乱 台美贸易谈判向前看 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240418-%E4%B8%AD%E7%BE%8E%E8%B4%B8%E6%98%93%E6%88%98%E9%98%B4%E4%BA%91%E4%B9%B1-%E5%8F%B0%E7%BE%8E%E8%B4%B8%E6%98%93%E8%B0%88%E5%88%A4%E5%90%91%E5%89%8D%E7%9C%8B)
 ------
 
-<div>18/04/2024 - 10:19</div><img src="https://s.rfi.fr/media/display/de4dac9c-fa86-11ee-8398-005056bfb2b6/w:1280/p:16x9/AP24103786777136.jpg"><p><strong>周四，中国今天指责美国总统拜登虚伪。美国总统拜登昨天在美国匹兹堡发表讲话指责中国当局在全球“钢铁”贸易中“排外”和“作弊”。 中国外交部发言人林剑今天回应称，“我想问拜登，你说的是中国还是美国？”        </strong></p><div><p>美国总统拜登昨天宣布，他希望将来自中国的钢铁和铝的关税提高两倍。法新社称，这是拜登试图吸引美国工人阶级的政治选票。拜登开始一个星期的在宾夕法尼亚州竞选宣传活动。</p><p>这位民主党人指责北京在全球钢铁贸易中“作弊”，损害了美国制造商及其工人的利益，美国制造商及其雇员是11月总统选举的关键选民，除非有任何意外，他将在这次选举中面对他的竞争对手特朗普。</p><p>拜登指控中国说，“他们仇外。” 这位民主党人感叹中国钢铁企业“不必担心盈利问题，因为中国政府对它们提供大量补贴”。拜登称，“他们不是在竞争，而是在作弊，我们已经在美国看到了这种损害。”</p><p>拜登自称是美国工人最好盟友。拜登说，“我不是在寻求与中国对抗，我想要竞争，而是公平竞争。”</p><p>拜登还进一步澄清，他保证不会与北京发生“贸易战”。</p><p>美国工会和雇主一致对这些保护主义措施表示欢迎。美国钢铁工人联合会（USW）感谢他为捍卫美国的钢铁而采取的“积极”行动。该工会上个月宣布支持民主党参加11月大选，指责拜登的对手特朗普“剥夺工人权利”，尽管特朗普也自称是美国制造业复兴的捍卫者。</p><p>法新社说，自 1990 年以来，宾夕法尼亚州已经失去了超过 40% 的制造业工作岗位，宾夕法尼亚州是美国工业的历史中心，也是可能在 11 月左右选举结果的六个关键州之一。</p><p>总部位于该州的美国钢铁巨头美国钢铁公司表示“赞赏”乔·拜登的声明，该行业的雇主组织也持这一立场。 这位民主党人周三还重申反对日本新日铁公司收购美国公司。</p><p>周二的前一天，拜登从家乡斯克兰顿呼吁为最富有的人增加税收，这与特朗普竞选立场形成鲜明对比。 周三，特朗普陷入非常忙碌，因为他在纽约忙碌的应对审判。</p><p>民主党目前的竞选活动，主要关注宾夕法尼亚州及其白人工人选民。</p><p>特朗普谴责拜登对他的不实指控。特朗普长期以来一直为增加对中国的关税辩护，他的竞选团队周三谴责了民主党及时改变主意。共和党指责“拜登的整个职业生涯都在背叛美国工人，”共和党发言人在一份声明中写道，拜登周三宣布的措施“太软弱，而且来得太晚”。</p><p>拜登周三还呼吁其贸易代表（USTR）“考虑将目前的关税提高两倍”，对进口到美国的部分钢铁和中国铝征收平均7.5%的关税。拜登政府还宣布对中国在“造船、航运和物流领域”的措施进行调查。</p><p>据法新社称，北京迅速谴责“不实指控”。中国商务部称，美国的调查“错误地将正常的贸易和投资活动解释为损害国家安全和美国企业的利益”。 美国“指责中国应对其自身的工业问题负责”。</p><p>尽管两国重新启动了对话，但美国的声明是在与中国激烈竞争的背景下做出的。当被问及这些声明是否会危及他试图与中国国家主席习近平维持的关系时，拜登回答说“不会”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWki.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E6%258B%259C%25E7%2599%25BB%25E6%2598%25A8%25E6%2599%259A%25E5%25A4%25A7%25E6%2589%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E6%258E%2592%25E5%25A4%2596%25E4%25B8%258E%25E4%25BD%259C%25E5%25BC%258A-%25E5%258F%2591%25E8%25A8%2580%25E4%25BA%25BA%25E6%259E%2597%25E5%2589%2591%25E4%25BB%258A%25E6%2597%25A9%25E5%2586%25B7%25E9%2597%25AE%25E6%2598%25AF%25E5%2590%25A6%25E8%25AF%25B4%25E7%25BE%258E%25E5%259B%25BD%25E8%2587%25AA%25E5%25B7%25B1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1%20-%20https%3A%2F%2Frfi.my%2FAWki.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1%20-%20https%3A%2F%2Frfi.my%2FAWki.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWki.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 21:21</div><img src="https://s.rfi.fr/media/display/da2a9e26-fb17-11ea-875a-005056bff430/w:1280/p:16x9/2020-09-20T073526Z_1670149232_RC272J9D8GQZ_RTRMADP_3_TAIWAN-JAPAN-CHINA.JPG"><p><strong>针对美国政府计划将中国钢铝产品的关税提高百分之二十五，中国商务部4月18日批评美方“转嫁矛盾”的做法是“一错再错”。中美贸易战火药味又一次散布全球之时，台美间的贸易谈判却前景乐观，且一直按部就班地向前发展。                    </strong></p><div><p>美国总统拜登17日向美国钢铁工人联合会（United Steelworkers）会员发表演讲，批评中国政府高额大量补贴，导致中国以不公平的低价向全球市场倾销远超过自身需求的钢铁。 他批评，早在2000年代初，宾州及俄亥俄州的钢铁产业就因此受到严重打击。 拜登指出，美国贸易代表戴琪（Katherine Tai）正在调查中国政府在钢铁和铝方面的贸易行为，如果证实有反竞争的情形，他会敦促戴琪将中国钢、铝税率提高到25%， 而目前这些产品的关税仅有7.5%，或根本不加征关税。</p><p><strong>中国商务部批美错上加错</strong></p><p>中国商务部官网18日晚以不具名的发言人名义，就此事回应称，美方对中国的指责“没有事实依据”，相关措施是典型的“单边主义、保护主义”做法，中方对此坚决反对。 发言人说，2018年以来，美国以“国家安全”之名，对全球贸易伙伴钢铝产品选择性加征关税，还以此胁迫贸易伙伴接受不公平条件。 美方相关措施已被世贸组织裁定违反世贸规则。</p><p>中国商务部发言人声称，美方无视国际经贸秩序和规则，将经贸问题政治化，“滥用所谓301关税复审程序，公开要求随意调整对中国产品关税，转嫁矛盾，是一错再错，也无助 于解决美国内产业面临的问题”。 美国施压别国限制中国产品，更将破坏全球产业链供应链的安全稳定。</p><p>该发言人表示，中方敦促美方正视自身问题，停止提高对中国产品关税，并立即取消对中国加征关税措施。 中方将采取一切必要措施，捍卫自身权益。</p><p><strong>台美贸易谈判向前看</strong></p><p>当中国大陆面临与美国的又一次贸易战阴云的时候，台湾与美国的经贸关系不断稳步向前。</p><p>台美去年6月在华盛顿签署了21世纪贸易倡议首批协定，涵盖关务行政及贸易便捷化、良好法制作业、服务业国内规章、反贪腐、中小企业等5项议题。第二阶段谈判将聚焦农业、劳动与环境3大议题，作业持续进行中。</p><p>美国贸易代表署应美国国会的要求公开了谈判3大议题的拟议文本，内容涉及食品安全、环境正义及远洋移工权益。美方建议提升农产品进口许可程序及认证要求的透明度，也要提高环境保护水准和移工劳权等领域议题。但这些都是双方讨论过程中有共识，或早已是台湾目标愿景。 比如，美方关心远洋渔船上的工作条件，台湾在渔业与人权行动计画（Action Plan for Fisheries and Human Rights）中也有相关规范。</p><p>台湾谈判官员认为，台美21世纪贸易倡议第二阶段谈判整体方向没有问题，正持续分组、分议题密集举行会前会，只是内容牵涉细节法规，必须一步步往前，需要一定时间，未来实体谈判将在台湾举行，但时间未定。</p><p><strong>台美 台英 台加三项贸易投资协议</strong></p><p>过去台湾只与新加坡、新西兰和有关邦交国之间存在自由贸易协定，数量偏低并在国际贸易整合上处境孤立。但继去年6月“台美21世纪贸易倡议”（U.S.-Taiwan Initiative on 21st-Century Trade）首批协定签署后，台湾去年11月与英国签署“深化贸易伙伴关系协议”（Enhanced Trade Partnership Arrangement）， 去年12月则与加拿大签署“投资促进及保障协议”（Foreign Investment Promotion and Protection Arrangement）。</p><p>台湾方面认为：如果台美避免双重课税协定也能完成，将对台美双边经贸打下更坚定基础。台湾也希望强化与澳洲和印度的贸易伙伴关系，因为印度和台湾具备持续推动贸易协议的基础。台湾投资将有助印度发展其制造业基础设施。印度正与中国竞争全球制造中心的地位，对台湾来说，这代表有加强 商业合作的机会。</p><p><strong>蔡英文期望：未来台湾能加入跨太平洋伙伴全面进步协定（CPTPP）</strong></p><p>今年3月7日，台湾总统蔡英文出席任内最后一次外交部新春联欢晚会时表示：过去8年政府积极改善基础建设、厚植国力，吸引外商投资台湾，协助产业布局全球，台湾与美国、日本、欧洲及新南向国家的经贸往来大幅成长。</p><p>她也特别指出：去年完成了签署台美21世纪贸易倡议首批协定，也和英国、加拿大分别签署提升贸易伙伴关系协议及投资促进及保障协议。她期待：未来台湾能加入跨太平洋伙伴全面进步协定（CPTPP） ，继续加强与全球经贸连结。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div>
