--- a/articles/rfi/999971.md
+++ b/articles/rfi/999971.md
@@ -1,5 +1,5 @@
-<!--1713438902000-->
-[20国急买50万发炮弹援乌](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C)
+<!--1713451513000-->
+[港府疑以行政手段消弭法庭裁决 记协获批就车牌查册新安排违宪提覆核](https://www.rfi.fr/cn/%E9%A6%99%E6%B8%AF/20240418-%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3-%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8)
 ------
 
-<div>18/04/2024 - 10:51</div><img src="https://s.rfi.fr/media/display/2c8b8e72-faf7-11ee-a0d4-005056bf30b7/w:1280/p:16x9/000_34P74XZ.jpg"><p><strong>捷克共和国发起了一项国际筹款行动，旨在为乌克兰军队购买弹药，而乌克兰军队在对俄战争中缺乏弹药。欧盟国家曾承诺在去年3月底之前向基辅供应100万枚炮弹，但由于缺乏足够的产能而未能交付。捷克称已调查发现世界有大炮弹壳库存，总计约 800,000 枚，可供欧洲国家购买。        </strong></p><div><p>据法新社稍早报道称，捷克总理彼得·菲亚拉表示，二十个国家已承诺在欧洲以外地区为乌克兰购买50万枚炮弹。他说，“我很高兴目前大约有二十个国家加入了我们的倡议，从加拿大到波兰，其中包括德国和荷兰。”</p><p>捷克官方称，至少50万发炮弹应该很快到货。他此前曾表示，首批交付可能会在六月进行。</p><p>据捷克媒体消息说，参与该倡议的国家还包括波罗的海国家、比利时、丹麦、芬兰、冰岛、卢森堡、挪威、葡萄牙和斯洛文尼亚。</p><p>据英国《金融时报》称，购买这80万枚炮弹将耗资15亿美元。</p><p>但捷克乌克兰重建专员托马斯·科佩奇尼周二在捷克电台估计，这笔费用可能是原来的两倍。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWlF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-20%25E5%259B%25BD%25E6%2580%25A5%25E4%25B9%25B050%25E4%25B8%2587%25E5%258F%2591%25E7%2582%25AE%25E5%25BC%25B9%25E6%258F%25B4%25E4%25B9%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C%20-%20https%3A%2F%2Frfi.my%2FAWlF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C%20-%20https%3A%2F%2Frfi.my%2FAWlF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWlF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 10:07</div><img src="https://s.rfi.fr/media/display/74d37194-fd5a-11ee-a779-005056a90284/w:1280/p:16x9/18.4%20%E8%94%A1%E7%8E%89%E7%8E%B2%E5%8B%9D%E8%A8%B4%EF%BC%8C%E4%BD%86%E8%A3%81%E6%B1%BA%E6%8C%87%E6%96%B0%E8%81%9E%E6%87%89%E5%B1%AC%E8%BB%8A%E7%89%8C%E6%9F%A5%E5%86%8A%E7%9B%AE%E7%9A%84%E4%B9%8B%E8%A3%81%E6%B1%BA%EF%BC%8C%E8%A2%AB%E9%81%8B%E8%BC%B8%E7%BD%B2%E7%9A%84%E6%96%B0%E5%AE%89%E6%8E%92%E5%BC%84%E8%87%B3%E6%9C%89%E7%AD%89%E6%96%BC%E7%84%A1%E3%80%82%28%E7%B6%B2%E4%B8%8A%E8%B3%87%E6%96%99%E5%9C%96%E7%89%87%29.gif"><p><strong>香港的最高级法院早前裁定，新闻调查应包含在查阅车辆登记资料(俗称「查册」)的选项中，运输部门其後修订政策，把新闻用途列入查册用途，但须经书面申请并详细列出目的及相关资料，再由运输署长审批，但新政策实施三个多月以来，署方从未批出任何一宗申请。香港记者协会(记协)为此提出司法覆核，指署方的拖延手法对言论及新闻自由构成不正当限制，要求颁令裁定新政策违宪，获法庭批准，稍後排期正式聆讯。        </strong></p><div><p>运输署因应最高级的终审法院裁决，於1月8日实施收紧车辆查册的新安排，根据《申请车辆登记细节证明书的指引》，新闻采访不属於可以自动查册的三个目的之一，而是须经运输署长审批的「例外情况」，而作出书面申请时须同时提交详细资料，令署长信纳申请符合「重大公众利益」丶资料不会被滥用等条件，才会获批查册。</p><p>网媒《集志社》本月初报道，截至上月底，运输署接获的16 宗「例外情况」申请，暂没成功个案，其中七宗撤回丶一宗遭拒丶八宗仍在处理中，当中半数被署方要求提交进一步资料。申请绝大部份属新闻用途申请，占 13宗，涉及四家新闻机构。</p><p>记协就此於本月5日入禀高等法院申请司法覆核，指署方的新安排与言论和新闻自由原则不一致，不合理地要求记者就其调查提交巨细无遗的资料，包括申请符合哪些公众利益？为何记者手上资料不足以报道等，认为有关要求是对新闻行业的误解，与人权原则不符。</p><p>记协又指出，自新措施实施三个多月来，署方处理为新闻采访目的而查册的申请，不合理地漫长及缓慢，至今未有任何记者成功查册，显见有关做法等同拒绝申请，与终审法院就相关案件的判决有冲突，要求法庭颁令《指引》不符合《香港人权法案条例》及《基本法》下对新闻及言论自由的保障，属越权或违宪，并要求法庭下令署方须迅速及在合理时间内对新闻用途的查册申请作出决定。</p><p>高等法院法官高浩文昨(17日)天颁下书面判决，向记协批出司法覆核许可，并着记协与运输署双方在两周内提供日期，以便排期正审，但日期不会早於7月。</p><p>事缘时任香港电台《铿锵集》编导蔡玉玲因跟进 「7.21 」元朗地铁站袭击事件丶以新闻目的向运输署申请车牌查册，但被指虚报资料，被判罪名成立，她一直上於至终审法院才获判胜诉。终院在裁决中指出，运输署无理由将「真诚的新闻调查」，例如怀疑车主使用其车辆干犯某罪行，排除在车牌查册目的的所有选项以外。署方於1月推出查册新指引。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWka.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%25A6%2599%25E6%25B8%25AF%2F20240418-%25E6%25B8%25AF%25E5%25BA%259C%25E7%2596%2591%25E4%25BB%25A5%25E8%25A1%258C%25E6%2594%25BF%25E6%2589%258B%25E6%25AE%25B5%25E6%25B6%2588%25E5%25BC%25AD%25E6%25B3%2595%25E5%25BA%25AD%25E8%25A3%2581%25E5%2586%25B3-%25E8%25AE%25B0%25E5%258D%258F%25E8%258E%25B7%25E6%2589%25B9%25E5%25B0%25B1%25E8%25BD%25A6%25E7%2589%258C%25E6%259F%25A5%25E5%2586%258C%25E6%2596%25B0%25E5%25AE%2589%25E6%258E%2592%25E8%25BF%259D%25E5%25AE%25AA%25E6%258F%2590%25E8%25A6%2586%25E6%25A0%25B8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8%20-%20https%3A%2F%2Frfi.my%2FAWka.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8%20-%20https%3A%2F%2Frfi.my%2FAWka.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWka.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
