--- a/articles/rfi/999972.md
+++ b/articles/rfi/999972.md
@@ -1,5 +1,5 @@
-<!--1713438902000-->
-[俄罗斯“非洲军团”布局非洲 - 聚焦非洲](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%81%9A%E7%84%A6%E9%9D%9E%E6%B4%B2/20240418-%E4%BF%84%E7%BD%97%E6%96%AF-%E9%9D%9E%E6%B4%B2%E5%86%9B%E5%9B%A2-%E5%B8%83%E5%B1%80%E9%9D%9E%E6%B4%B2)
+<!--1713444302000-->
+[政客报透露中国秘密与美国国会讨论TikTok 有疑适得其反](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BA%E6%8A%96%E9%9F%B3-%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D)
 ------
 
-<div>18/04/2024 - 12:46</div><img src="https://s.rfi.fr/media/display/785e392c-0d70-11ea-b7ec-005056bfe576/w:1280/p:16x9/Carte-Libye-Niger-Burkina-410_0.png"><p><strong>一周前，一艘俄罗斯货船“机械马卡林号”（Mekhanic Makarin）经突尼斯苏塞港后停靠在利比亚东部。4月8日，两艘舰艇“伊万·格林”号和“亚历山大·奥特拉科夫斯基”号从俄罗斯位于叙利亚的塔尔图斯海军基地出发，停靠在利比亚托布鲁克。这两艘军舰自俄罗斯入侵乌克兰以来一直在黑海服役，负责为俄罗斯军队提供后勤装备和火炮。4月12日，伊尔-76运输机连夜将俄罗斯非洲军团士兵运送到尼日尔，该国与利比亚接壤。 在尼日尔发生军事政变前夕，同型号飞机也曾出现在布基纳法索，运送俄罗斯军人，教官，后勤人员。所有这些分散的有时彼此相距一千公里的部署，都证明莫斯科正在加强其在利比亚东部和中部的存在，以建立一条贯通萨赫勒地区的线路并实现其在利比亚建立军事基地的梦想。                    </strong></p><div><p>这是近日发表在法国《观点》杂志非洲版上的一篇题为《俄罗斯在利比亚安家》的长文的开篇，这篇关注俄罗斯非洲军团动向的文章接下来指出，对于一个发迹于西伯利亚大草原的发展中国家，选择利比亚展现出不同寻常的地理和地缘政治灵活性。利比亚这个国土面积三倍于法国的国家，坐拥1770公里的地中海海岸，隔海与意大利和希腊相望，它同时还与埃及、苏丹、乍得，尼日尔（萨赫勒）、突尼斯和阿尔及利亚（马格里布）接壤。这个国家面临着四股热点问题的挑战：圣战主义、走私，非法移民及正在肆虐苏丹的军事冲突……利比亚对于“非洲军队”来说是一个绝佳的机会。自2011年利比亚爆发革命推翻卡扎菲四十年独裁统治以来，在北约国家的军事干预及包括土耳其、阿联酋、卡塔尔、俄罗斯多国军事介入下，利比亚一直处于南北分裂状态，该国也是通往撒哈拉和萨赫勒地区的门户。</p><p>所谓俄罗斯“非洲军队”是指克里姆林宫的新军队，前身是已故普里戈金的瓦格纳雇佣军。“非洲军团”名称来自二次大战时驰骋北非的一支德国远征军，帅将为德国陆军元帅隆美尔。</p><p>2024年，整个萨赫勒地区危机四伏，自第二次世界大战以来，撒哈拉沙漠从未经历过如此的惊心动魄。马里、布基纳法索、尼日尔三国军头先后发动军事政变，轻易将曾经的宗主国法国的军事存在驱逐出境，同时投入克里姆林宫的怀抱。4月10号，一架装饰着俄罗斯国旗的白色宽体飞机降落在尼亚美机场，在飞机引擎震耳欲聋的噪音中，俄新社的记者对首批俄罗斯非洲军团士兵抵达尼日尔进行了评论，他说，“这意味着俄罗斯正在重返非洲”。事实上，莫斯科已经出现在从利比亚到苏丹、从萨赫勒到中非共和国的各个地区。继马里和布基纳法索之后，第三个由叛变军人领导的萨赫勒国家进一步成为西非亲俄阵营的成员。</p><p>尼日尔是克里姆林宫的一张王牌。这个人口两千五百万的国家位于世界最不稳定地区，是世界上最贫穷的国家之一，也是非洲向欧洲输送非法移民的集散地。尼日尔军头推翻民选总统巴祖姆后，这个曾经一直是萨赫勒地区欧美可靠盟友的国家，开始执政，先切断与法国的联系，关闭大使馆，要求一千五百名法国驻军离境，随后又撕毁与美国的安全协议，驱逐美国驻军，拒绝欧盟在阿加德兹执行其移民任务。走私不再被定为犯罪，它已被新颁布的法令合法化。去年12月，俄罗斯国防部副部长埃夫库罗夫 (Younous-bek Evkourov) 上将首次访问尼亚美，并与尼日尔签署了“加强安全合作”的秘密防务“协议”。 一个半月后，尼日尔过渡政府首脑扎伊纳率领一个大型部长级代表团访问了俄罗斯。2023年9月，在俄罗斯支持下，萨赫勒国家联盟成立，成员国马里，布基纳法索和尼日尔同时宣布脱离西非国家经济共同体。自此，尼日尔，这个萨赫勒地区曾经的欧美盟友彻底倒向俄罗斯。</p><p>法国国防部国际关系与战略总局下属军事学校战略研究所(IRSEM)俄罗斯影响力专家奥迪内特（Maxime Audinet）表示：“非洲军团抵达尼日尔标志着俄罗斯在该地区的持续扩张，并得到萨赫勒国家联盟（AES）制度化支持，莫斯科正通过这个新晋联盟施加影响力”。他说：“我们正在见证后普里戈金时代俄罗斯在萨赫勒地区的存在，这是由俄罗斯军事情报部门（GRU）和国防部精心策划的，他们正试图重新控制瓦格纳在非洲的遗产。”</p><p>俄罗斯正在非洲陷入危机的国家一步步确立自己的地位，与那些向克里姆林宫寻求安全保护的政变军头同谋，强加反西方议程。然而，达喀尔安全研究院高级研究员吉比·索乌表示：“非洲伙伴很快会明白，与俄罗斯的这种关系不会让他们如愿以偿，特别是在经济发展方面，因为中国、欧盟、美国以及现在的印度和土耳其在经济贸易上远远超过莫斯科。”</p><p>根据易卜拉欣基金会2023年8月发布的分析报告；俄罗斯仅占非洲出口总额的1.8%，而欧盟为26.7%，中国为19.9%，印度为5.6%。俄非贸易以原材料出口为主，这些原材料对非洲大陆的经济几乎没有附加值。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%A1%91%E9%9B%A8/" title="桑雨">桑雨</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 12:14</div><img src="https://s.rfi.fr/media/display/8bfd6d7e-e181-11ee-9af3-005056a97e36/w:1280/p:16x9/2024-03-13T141117Z_179367349_RC2VA1AM24NU_RTRMADP_3_USA-TIKTOK-CONGRESS.JPG"><p><strong>两名美国国会山工作人员表示，中国大使馆已与国会工作人员举行会议，游说反对强制出售 TikTok 的立法。中国外交派驻似乎没有否认此一消息。TikTok曾派出高管新加坡人周受资在美国国会接受质询，明确称TikTok与中国官方没有任何关系。但美国议员称，中国使馆的动作恰恰表明TikTok对中国官方很重要。        </strong></p><div><p>据POLITICO报道称，中国外交官正在悄悄与美国国会工作人员会面讨论 TikTok。</p><p>在众议院通过一项强制出售该公司的法案后，中国大使馆的外交官与美国国会办公室会面，推动捍卫该应用程序。</p><p>总部位于北京的字节跳动公司旗下的 TikTok 一再否认与中国政府有关系，并试图与在中国母公司保持距离。但现在，由于强制出售该公司的立法在参议院面临着不确定的前景，中国大使馆似乎正在利用中国政治影响力来保护TikTok公司在美国的未来。</p><p>美国国会工作人员表示，与美国国会工作人员的会面是由中国大使馆在外展活动中发起的，最初并未提及 TikTok，其中一名人员在众议院工作，另一名在参议院工作，他们被要求匿名讨论他们所讨论的对话。未获授权公开透露。这些会议是在众议院三月份以压倒性多数投票支持《保护美国人免受外国对手控制应用程序侵害法案》之后举行的，该法案将迫使字节跳动出售 TikTok。</p><p>此外，据第三位工作人员（一位被联系的民主党参议院助手）透露，在另一次安排会面的电话中，一名中国大使馆官员表示，中国大使有兴趣讨论众议院的 TikTok 法案等问题。</p><p>两名工作人员表示，大使馆在两次会议上都淡化了对 TikTok 的美国国家安全担忧，并寻求将该应用程序与美国利益保持一致：在一次会议上，中国大使馆表示对 TikTok 的禁令将损害持有字节跳动部分股权的美国投资者。另一方面，中国大使馆强调并非所有字节跳动董事会成员都是中国公民。</p><p>美国国会工作人员表示，尽管 TikTok 公开努力与其创始人的出身保持距离，但中国大使馆还试图声称该公司是中国公司。与字节跳动不同，TikTok 的总部位于新加坡和美国。据众议院工作人员称，在一次会议上，中国大使馆辩称该立法相当于强制传输一家中国公司的数据。另一方面，据美国参议院工作人员称，中国大使馆认为这一努力对中国公司不公平，因为美国不会以同样的方式对待不同国籍的公司。</p><p>TikTok 在一份声明中表示，中国大使馆参与会议“对我们来说是新闻，要求我们对我们一无所知的匿名消息来源发表评论是荒谬的”。TikTok 发言人亚历克斯·豪雷克 (Alex Haurek) 表示：“自该法案提出以来，我们一直公开表达反对该禁令法案的原因。” “这份所谓的报道没有通过事实证实，Politico 发表它是不负责任的。”</p><p>据Politico称，不过，中国大使馆并未否认举行过这些会议。中国使馆发言人刘鹏宇在一份声明中表示，“中国驻美国使馆试图向美国各界人士讲清TikTok问题的真相。”刘鹏宇说，“这不是为某一家公司游说，”该发言人补充道，“而是关于是否所有中国公司都能得到公平对待。”</p><p>该声明接着重申了美国国会工作人员所说的在会议上提出的一些论点，包括反驳美国国家安全担忧，以及强调对字节跳动的国际投资。</p><p>中国使馆声明还强调，尽管TikTok的运营合法，但美国“已想方设法动用国家力量对其进行打压”。</p><p>据Politico，TikTok 已经武装了数十名游说者，并花费了数百万美元来反驳华盛顿有关该公司的言论，该应用程序的反对者一再辩称，它是中国影响美国情绪的强大工具。该公司还花费了数百万美元进行广告，以争取公众对这项立法的支持，并通过推送警报来利用其消费者基础，使该应用程序的用户可以轻松地致电国会。保守派的增长俱乐部（Club for Growth）是一个由字节跳动主要投资者杰夫·亚斯（Jeff Yass）部分资助的政治拥护团体，也敦促立法者推动这项法案。</p><p>由于美国参议院仍处于僵局，影响国会办公室的广泛努力最终可能会成功。参议院商务委员会主席参议员玛丽亚·坎特韦尔（华盛顿州民主党人）一直在与其他办公室就该法案的措辞进行谈判，以巩固法案法律地位。众议院法案的支持者、中国共产党特别委员会主席迈克·加拉格尔（威斯康星州共和党人）将于本月离开众议院。预计强制出售 TikTok将被纳入众议院议长迈克·约翰逊周三发布的一系列有关外国援助和外国对手的法案中。</p><p>外交官的游说活动在很大程度上不被公众所知，因为它们通常不受外国影响美国政治行为透明度规则的涵盖。曾在司法部负责外国影响力法执行工作的戴维·劳夫曼 (David Laufman) 表示，《外国代理人登记法》包括明确豁免某些大使馆官员的条款。</p><p>一位参加与中国官员会面的美国国会工作人员指出，中国大使馆此前也曾试图对抗美国针对另一家中国科技公司华为的行动。</p><p>在公开场合，中国也批评国会针对 TikTok 采取的行动。美国众议院法案通过后，中国外交部表示，该法案“使美国站在了公平竞争原则和国际贸易规则的错误一边”。</p><p>美国外交政策委员会印度太平洋研究高级研究员迈克尔·索博利克认为，中国大使馆游说活动的曝光反而凸显了将 TikTok 与其中国母公司分开的必要性。</p><p>索博利克说，“中国外交官这一次帮了美国一个忙。” 索博利克是有关美中关系的书《反击中国的大博弈》的作者。索博利克说，“通过游说美国国会工作人员保护 TikTok 与字节跳动的关系，（中华人民共和国）官员揭示了 TikTok 对中国共产党的价值。失去对该应用程序的控制，将削弱北京针对美国人行为最有力的武器。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWmF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E6%2594%25BF%25E5%25AE%25A2%25E6%258A%25A5%25E9%2580%258F%25E9%259C%25B2%25E4%25B8%25AD%25E5%259B%25BD%25E7%25A7%2598%25E5%25AF%2586%25E4%25B8%258E%25E7%25BE%258E%25E5%259B%25BD%25E5%259B%25BD%25E4%25BC%259A%25E8%25AE%25A8%25E8%25AE%25BA%25E6%258A%2596%25E9%259F%25B3-%25E6%259C%2589%25E7%2596%2591%25E9%2580%2582%25E5%25BE%2597%25E5%2585%25B6%25E5%258F%258D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D%20-%20https%3A%2F%2Frfi.my%2FAWmF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D%20-%20https%3A%2F%2Frfi.my%2FAWmF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWmF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
