--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
-<!--1713438901000-->
-[中国34岁网红“飞飞一杯酒”疑心脏病猝死 冲热搜第一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2-%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92-%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB-%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80)
+<!--1713444302000-->
+[法国总理阿塔尔上任一百天了 政绩如何？ - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240418-%E6%B3%95%E5%9B%BD%E6%80%BB%E7%90%86%E9%98%BF%E5%A1%94%E5%B0%94%E4%B8%8A%E4%BB%BB%E4%B8%80%E7%99%BE%E5%A4%A9%E4%BA%86-%E6%94%BF%E7%BB%A9%E5%A6%82%E4%BD%95)
 ------
 
-<div>18/04/2024 - 11:53</div><img src="https://s.rfi.fr/media/display/726932c2-fd69-11ee-8493-005056a90284/w:1280/p:16x9/whts.jpg"><p><strong>在中国微博、抖音拥有89万、51万粉丝的中国网红“飞飞一杯酒”是知名酒类博主，号称“喝了几千款，永远差一杯”。17日晚间突传该网红死讯。        </strong></p><div><p>据自由时报今天报道称，34岁网红飞飞一杯酒心脏病猝死 过世当天还更新影片。“飞飞一杯酒”死讯曝光后，随即冲上微博热搜第一名，他的微博号昨晚也发讣闻，指他15日因心脏病突发在河南省中医院过世，享年34岁。</p><p>讣闻中形容“飞飞一杯酒”一生“出生、读书、画画”、“喝酒、侃酒、交友”，“结婚、生子、离去”，走完了一生；但更让人不舍的是，他的微博在15日下午4时30分还更新影片，让许多网友留言不舍哀悼一路走好，并推测其死因可能与生活长期熬夜和饮酒有关。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWlt.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E4%25B8%25AD%25E5%259B%25BD34%25E5%25B2%2581%25E7%25BD%2591%25E7%25BA%25A2-%25E9%25A3%259E%25E9%25A3%259E%25E4%25B8%2580%25E6%259D%25AF%25E9%2585%2592-%25E7%2596%2591%25E5%25BF%2583%25E8%2584%258F%25E7%2597%2585%25E7%258C%259D%25E6%25AD%25BB-%25E5%2586%25B2%25E7%2583%25AD%25E6%2590%259C%25E7%25AC%25AC%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWlt.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 14:03</div><img src="https://s.rfi.fr/media/display/b0a32400-f006-11ee-8629-005056a90284/w:1280/p:16x9/2024-03-27T202323Z_336472124_RC2OP6A8S2QK_RTRMADP_3_FRANCE-UNEMPLOYMENT-ATTAL.JPG"><p><strong>周四（4月18号）是法国总理加布里埃尔-阿塔尔被任命100天，各报均对这个主题有大幅报道和分析。根据咨询公司Odoxa-Backbone Consulting 为《费加罗报》所做的最新民意调查，法国人虽然对总理的行为持批评态度，但对他的个人魅力表示认可。                    </strong></p><div><p>根据这份民调， 48%的法国人认为他是一位好总理，但他的形象在多个方面都在下滑：68%的法国人认为他充满活力，下降两个百分点，但认为他有魅力或贴近民众关切的人分别为45%和44%, 均有所下降。</p><p>在他入职后的总政策演讲中，新总理曾定下了基调：包括"重塑法国"、"取消对员工的补贴"、创造住房 "供应冲击"、"去行政官僚化"......在抵达马蒂尼翁一百天后，现在到了阿塔尔做一个小总结的时候了。各报自然对他的政策亮点进行了点评和期望。</p><p><strong>青年暴力和教育问题</strong></p><p>右翼《费加罗报》指出，加布里埃尔-阿塔尔（Gabriel Attal）希望在本周四纪念他上任100天之际，利用他在马蒂尼翁的权威，他要前往埃松省（Essonne）的维利-沙蒂永（Viri-Châtillon），之所以选择这个城市，是因为十天前在该市的一个中学校门口，发生了一名15岁的少年被人殴打致死而震惊法国舆论的惨案。阿塔尔将发表题为"“关于共和国核心权力”的演讲，试图消除人们的疑虑。但尽管这位前教育部长似乎曾带来了典范式的转变，但在世俗主义受到质疑的背景下，青少年暴力事件数量仍在令人担忧地增加。</p><p>左翼《解放报》指出，自1月9日上任以来，总理一直在应对动荡的预算形势和国民议会中脆弱的相对多数。为了坚持自己的立场，政府首脑寄希望于恢复权威，尤其是在青年和教育问题上。</p><p>《费加罗报》指出，糟糕的政府政绩和公共财政的急剧恶化，正在为他作为政府首脑的第一步成果蒙上阴影，尽管在这些问题上，他此前的声望一直很高。阿塔尔意识到自己在国民议会中并不占绝对多数，因此自上任以来一直没有提交任何重要立法。这让他的一些部下感到不耐烦，一些人呼吁 "重新启动立法机器"。为了回应对总理言行不一的指责，各部长办公室于周二晚间接到指示，要求他们准备视觉资料，在社交网络上列出总理的成就。</p><p><strong>空洞的一百天</strong></p><p>《解放报》的一篇评论更指出，加布里埃尔-阿塔尔在总理府的一百天，是空洞的一百天：既不左，也不由，什么都不是。总统马克龙的第四任总理上任三个月后，其沟通方式虽然花样多但均短视。作者认为这是马克龙主义没有指南针的表现。如果相信阿塔尔的演讲和他的执政艺术，那么他的逻辑应该是努力与右派共同执政，以获得绝对多数。但是，如果没有事先达成的政治协议，没有足够自信的道德或个人权威，阿塔尔将一事无成。他甚至无法在欧洲大选中为复兴党推出名单开展有效的竞选活动。他的出现只不过是作为一种回应的尝试，旨在对抗在欧洲议会选举上占据投票意向领先的极右翼国民联盟的带头人巴尔德拉（Jordan Bardella<em> ) </em>的效应。</p><p>这篇充满批评语气的文章最后写道：没有多数，没有权威，没有明确的政治定位，没有改革计划来安排未来几个月的工作，阿塔尔除了努力避免错过奥运会的组织工作，以及带着矛盾的双重目标：既不吓唬评级机构，以免我们的债务利率飙升，又不冒社会危机的风险，很难看出他还有什么作用。在欧洲大选可能失败后，这样一个政治团队如何能够团结一致？</p><p><strong>欧洲议会选举的挑战</strong></p><p>对于加布里埃尔-阿塔尔的政治未来，右派的《费加罗报》似乎也不看好，指出，他最坏的打算是什么？在马蒂尼翁的日子不会长久，而议会提出谴责动议的可能性正日益激化右翼队伍，并可能拉拢左翼和新军。总理深知这一点：从 7 月 9 日起，即欧洲大选一个月后，也就是他上任六个月后，国家元首必须按照传统授予他国家功勋大十字勋章。那么，至少他还有一百天的任期。</p><p>经济类报纸《回声报》同一主题指出，在总理府马提翁执政一百天后，加布里埃尔-阿塔尔着手解决 "权力削弱 "问题。周四的讲话要回应公众对安全的强烈要求。马克龙总统在奥林匹克运动会开幕前一百天，就法国人关心的另一个问题--奥林匹克运动会的安全问题作出了保证。</p><p>该报指出，面对极右翼的国民联盟的攻势，执政党多数派仍未找到扭转趋势的良方。妖魔化不再奏效，谴责国民联盟议员在欧洲议会的记录或审查他们的提案也不再奏效。根据《回声报》（Les Echos）和 古典广播电台（Radio classique）委托进行的 EuroTrack 民意调查，对安全问题讨论的支持率正在上升，在本次议会大选中位列第三，仅次于购买力和物价上涨议题。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E7%B1%B3/" title="艾米">艾米</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
