--- a/articles/rfi/999978.md
+++ b/articles/rfi/999978.md
@@ -1,5 +1,5 @@
-<!--1713433502000-->
-[赖清德入选《时代》杂志百位最具影响力人物名单](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89-%E6%97%B6%E4%BB%A3-%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95)
+<!--1713438902000-->
+[20国急买50万发炮弹援乌](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C)
 ------
 
-<div>18/04/2024 - 10:19</div><img src="https://s.rfi.fr/media/display/6cd2042e-3573-11ee-a841-005056a90284/w:1280/p:16x9/%E8%B5%96%E6%B8%85%E5%BE%B7.jpg"><p><strong>将于5月正式就职的台湾下一任总统赖清德入选《时代》杂志100位最具影响力的人物名单。《时代》杂志公布了2024年全球百位最具影响力的人物名单后，台湾总统府周四做出表态称：赖清德入选此一名单，标志着国际社会对台湾人民“民主成就”的重要认可。同时表示：赖清德将“承担维护台湾民主的重要职责”。        </strong></p><div><p>在今年1月举行的台湾大选中胜出的副总统赖清德将于5月20日在台湾与中国大陆之间的紧张关系持续加剧的背景下宣誓就职。</p><p>美国前驻华大使、犹他州前州长乔恩-亨茨曼（洪博培）在《时代》杂志上写道：在中国加大力度准备收复台湾的造势中，保护（台湾）岛2300万民众的健康只是赖清德继承的更艰巨的任务之一。</p><p>法新社指出：中国视台湾为其领土的一部分，从未放弃要“收复”台湾的愿望，并表示“不排除使用武力收复台湾的可能”。</p><p>近年来，北京加大了对台湾的军事和政治压力，并谴责赖清德为“危险的分裂分子”。赖清德与蔡英文一样拒绝承认北京对台湾的主权要求。</p><p>《时代》杂志每年都会发表百位影响力人物名单。即将卸任的台湾总统蔡英文曾入选2020年名单。当时推荐蔡英文的美国联邦参议员科鲁兹（Ted Cruz）称蔡英文为“驱散中国威胁阴影的光环，向世界表明：台湾不会屈服于中国共产党的要求”。</p><p>另据法新社报道：中国现任总理李强也被提上《时代》杂志最有影响力的人物名单。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWkk.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B7%25E5%2585%25A5%25E9%2580%2589-%25E6%2597%25B6%25E4%25BB%25A3-%25E6%259D%2582%25E5%25BF%2597%25E7%2599%25BE%25E4%25BD%258D%25E6%259C%2580%25E5%2585%25B7%25E5%25BD%25B1%25E5%2593%258D%25E5%258A%259B%25E4%25BA%25BA%25E7%2589%25A9%25E5%2590%258D%25E5%258D%2595&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89%E3%80%8A%E6%97%B6%E4%BB%A3%E3%80%8B%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95%20-%20https%3A%2F%2Frfi.my%2FAWkk.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89%E3%80%8A%E6%97%B6%E4%BB%A3%E3%80%8B%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95%20-%20https%3A%2F%2Frfi.my%2FAWkk.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWkk.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89%E3%80%8A%E6%97%B6%E4%BB%A3%E3%80%8B%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 10:51</div><img src="https://s.rfi.fr/media/display/2c8b8e72-faf7-11ee-a0d4-005056bf30b7/w:1280/p:16x9/000_34P74XZ.jpg"><p><strong>捷克共和国发起了一项国际筹款行动，旨在为乌克兰军队购买弹药，而乌克兰军队在对俄战争中缺乏弹药。欧盟国家曾承诺在去年3月底之前向基辅供应100万枚炮弹，但由于缺乏足够的产能而未能交付。捷克称已调查发现世界有大炮弹壳库存，总计约 800,000 枚，可供欧洲国家购买。        </strong></p><div><p>据法新社稍早报道称，捷克总理彼得·菲亚拉表示，二十个国家已承诺在欧洲以外地区为乌克兰购买50万枚炮弹。他说，“我很高兴目前大约有二十个国家加入了我们的倡议，从加拿大到波兰，其中包括德国和荷兰。”</p><p>捷克官方称，至少50万发炮弹应该很快到货。他此前曾表示，首批交付可能会在六月进行。</p><p>据捷克媒体消息说，参与该倡议的国家还包括波罗的海国家、比利时、丹麦、芬兰、冰岛、卢森堡、挪威、葡萄牙和斯洛文尼亚。</p><p>据英国《金融时报》称，购买这80万枚炮弹将耗资15亿美元。</p><p>但捷克乌克兰重建专员托马斯·科佩奇尼周二在捷克电台估计，这笔费用可能是原来的两倍。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWlF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-20%25E5%259B%25BD%25E6%2580%25A5%25E4%25B9%25B050%25E4%25B8%2587%25E5%258F%2591%25E7%2582%25AE%25E5%25BC%25B9%25E6%258F%25B4%25E4%25B9%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C%20-%20https%3A%2F%2Frfi.my%2FAWlF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C%20-%20https%3A%2F%2Frfi.my%2FAWlF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWlF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
