--- a/articles/rfi/999979.md
+++ b/articles/rfi/999979.md
@@ -1,5 +1,5 @@
-<!--1713433502000-->
-[乌战最大影响之一：面对美国，中俄轴心得到加强 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240417-%E4%B8%AD%E4%BF%84%E5%85%B3%E7%B3%BB%E6%B7%B1%E5%8C%96-%E8%AE%A9%E7%BE%8E%E5%9B%BD%E6%8B%85%E5%BF%83)
+<!--1713438902000-->
+[俄罗斯“非洲军团”布局非洲 - 聚焦非洲](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%81%9A%E7%84%A6%E9%9D%9E%E6%B4%B2/20240418-%E4%BF%84%E7%BD%97%E6%96%AF-%E9%9D%9E%E6%B4%B2%E5%86%9B%E5%9B%A2-%E5%B8%83%E5%B1%80%E9%9D%9E%E6%B4%B2)
 ------
 
-<div>17/04/2024 - 23:11</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>周四（4月18号）上市的法国《世界报》有多篇文章与中国有关。两篇占据着国际版的版面的文章分别是《北京关注所罗门群岛的选举》，另一篇为《 在十年的 “猎狐”行动中，中国遣返了数千名 “逃犯”》。地缘政治专栏关注的是乌克兰战争让美国的担心的中俄日益结盟。                    </strong></p><div><p>文章作者Sylvie Kauffmann在文中开头写道，德国总理奥拉夫-肖尔茨（Olaf Scholz）于4月17日（周三）结束访华，以及中国国家主席习近平于5月6日在巴黎接会见埃马纽埃尔-马克龙（Emmanuel Macron）的欧洲之行前，华盛顿向欧洲人传达了一个信息：既然你们与北京保持着高层关系，就利用这种关系向中国施压，使其停止在乌克兰战争中帮助俄罗斯。最近几周，法国外长斯特凡-塞茹尔内（Stéphane Séjourné）在北京、美国访华的领导人以及朔尔茨（Olaf Scholz）都积极转达了这一信息。这反映了美国对乌克兰战争最引人注目的地缘政治影响之一——中俄关系的深化——的担忧。</p><p> 为了让那些依然怀疑的人相信这种深化对战争进程产生了具体影响，并在一定程度上解释俄罗斯经济, 4 月 12 日，华盛顿公布了之前保密的数据：包括，在 2023 年最后一个季度，中国向俄罗斯提供了用于生产弹道导弹的机床进口量的 70%以上。2023年全年，俄罗斯进口的微电子产品中90%来自中国，而微电子产品对导弹和坦克的制造至关重要。</p><p><strong>美国为何突然坚持中国因素？</strong></p><p>尽管受到西方制裁，但俄罗斯工业仍以惊人的速度恢复并大量生产武器，面对因西方供应迟缓而陷入困境的乌克兰军队，这些武器在当地发挥了重要作用。</p><p>克里姆林宫从中国和印度进口的俄罗斯石油中获得了可观的收入，这些国家现在已经弥补了莫斯科失去欧洲市场的损失。但来自中国的物质援助似乎正在发挥着重要作用，即使这种援助没有越过提供致命武器的红线。</p><p>另一种解释是中俄轴心的加强，这是大国间力量平衡演变的主要趋势。对于以中国力量崛起衡量一切的美国来说，这一点不容忽视。众所周知，中俄关系的根本就是共同反对美国统治。</p><p><strong>“俄罗斯正在将自己锁定为中国的附庸”</strong></p><p>俄中关系的缓和并不是全新的，莫斯科早在2014年就转向了中国，当时俄罗斯吞并克里米亚后与西方国家的关系降温，第一波制裁也随之而来，从那时起，中俄之间的贸易大幅增长。但直到 2022 年，欧盟仍是莫斯科的重要经济伙伴，对乌克兰发动大规模战争后，俄罗斯被迫完全转向中国。</p><p>2022 年 2 月 4 日，普京和习近平两国元首在北京冬奥会之际举行会晤，并发表公报宣布 "无限友谊"，这被视为两国关系缓和的重要一步。此时距离普京入侵乌克兰还有三周时间，人们一直在猜测普京是否向习近平警告了他正在策划的攻势。</p><p>但从那时起，他们之间的关系得到了巩固。卡内基智库专家亚历山大-加布耶夫（Alexander Gabuev）在《外交事务》（Foreign Affairs）杂志上写道："俄罗斯维持与西方对抗的唯一途径是将俄罗斯的经济、人才和军事技术融入"中国大同”，即以欧亚大陆为地理中心、由中国主导的秩序。俄罗斯正在将自己锁定为中国的附庸"。</p><p>因此，西方国家中那些主张与普京对话的人所追求的，防止俄罗斯落入中国的轨道并将俄罗斯与欧洲联系在一起的目标不仅没有实现，而且乌克兰战争实际上将俄罗斯投入了中国的怀抱。</p><p>然而，中国政府似乎并没有用爱的眼光来看待这场有些勉强的婚姻。尽管两国领导人频繁接触，且预计普京将于 5 月再次访问北京， 但 "友谊无上限 "的说法并未再被提及，两国也没有结成联盟。</p><p><strong>宗主对附庸并不仁慈</strong></p><p>一些中国学者和专家在中国之外的媒体上对俄罗斯转向亚洲的真实性持保留意见：北京大学的关贵海（音译）认为在普京在乌克兰问题上的固执可以解释为他害怕失去俄罗斯的欧洲身份。他在美国外交关系委员会网站上写道，“如果俄罗斯失去乌克兰，"其与欧洲的联系将大大削弱，其战略空间将远离欧洲中心，俄罗斯将更像一个亚洲国家"。</p><p>中国的另一个保留意见是：中俄两国对世界秩序演变的看法并不一致。学者冯玉军（音译）在《经济学人》上写道："俄罗斯试图通过战争破坏现有的地区和国际秩序，而中国则希望和平解决冲突"，他对普京在乌克兰的军事表现印象深刻，"俄罗斯不可战胜的神话已经破灭"。</p><p>宗主对附庸并不仁慈。面对中俄轴心，美国正在巩固其印太集团，同时呼吁欧洲就乌克兰问题与北京进行 "有力的对话"，条件是欧洲人准备好这样做了。</p><p><strong> 在十年的 “猎狐”行动中，中国遣返了数千名 “逃犯”</strong></p><p>在《世界报》上这篇关注中国“猎狐”计划的文章中， 作者Simon Leplâtre指出，总部设在马德里的非政府组织 "保护捍卫者 "于 4 月 16 日发表了一份报告，回顾了这项于 2015 年更名为 "天网 "运动的十年历程。报告审查了 283 起强制遣返案件，其中四起来自法国。</p><p>虽然有些国家直接或通过国际刑警组织与中国合作，但大多数行动都是在任何法律框架之外进行的。据中国共产党中央纪律检查委员会（CCDI）称，十年来，作为行动的一部分，已有 12,000 人从 120 个国家被强制遣返。这次行动是在习近平主席上任一年多后启动的，紧随大规模反腐运动之后。最初的目标是遣返被称为 "狐狸 "的腐败官员。但这场运动也与中国在国际舞台上的崛起不谋而合，中国政府认为，在崛起的同时应加强对其公民在海外活动的控制。实际上，这些方法也适用于批评中国政权的人，或谴责其家人在中国所受待遇的受害者亲属。</p><p>散居国外的维吾尔族人受到的打击尤为严重。报告重点介绍了土耳其维吾尔族人的情况："中国当局根据收集到的关于生活在土耳其的维吾尔族人的信息，以及他们对留在中国的家人安全的担忧，胁迫或威胁他们停止激进活动，制作有利于中国的宣传品，和/或监视土耳其的其他维吾尔族人"。除这些威胁外，特工还可能提供奖励：包括金钱或探访中国亲属的机会。</p><p>在一些与中国政治关系密切的国家，如斐济，与北京签署了安全协议后，中国特工的行为就像在国内一样。东南亚许多国家也与中国政府合作。近年来，随着 Covid-19 大流行，由中国黑帮组织的网上诈骗活动日益猖獗，尤其是来自缅甸的诈骗活动。</p><p>然而，随着时间的推移，国际社会也做出了反应：例如，在斐济，2022 年底当选的新总理下令修改与中国的合作协议，该国不再欢迎中国官员入境。2022 年，欧洲人权法院做出裁决，宣布波兰对一名台湾公民提起的诉讼无效，这名台湾公民被威胁要引渡到中国，不是因为他的国籍，而是因为中国政权的专制性质。此案开创了先例。报告说："从那时起，情况发生了翻天覆地的变化，欧洲委员会的 46 个成员国系统地拒绝了向中国提出的引渡请求（......）"。最后，在美国，中国和美国公民在多起与企图强制遣返中国有关的案件中被捕并受审。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E7%B1%B3/" title="艾米">艾米</a></div></div></div></div>
+<div>18/04/2024 - 12:46</div><img src="https://s.rfi.fr/media/display/785e392c-0d70-11ea-b7ec-005056bfe576/w:1280/p:16x9/Carte-Libye-Niger-Burkina-410_0.png"><p><strong>一周前，一艘俄罗斯货船“机械马卡林号”（Mekhanic Makarin）经突尼斯苏塞港后停靠在利比亚东部。4月8日，两艘舰艇“伊万·格林”号和“亚历山大·奥特拉科夫斯基”号从俄罗斯位于叙利亚的塔尔图斯海军基地出发，停靠在利比亚托布鲁克。这两艘军舰自俄罗斯入侵乌克兰以来一直在黑海服役，负责为俄罗斯军队提供后勤装备和火炮。4月12日，伊尔-76运输机连夜将俄罗斯非洲军团士兵运送到尼日尔，该国与利比亚接壤。 在尼日尔发生军事政变前夕，同型号飞机也曾出现在布基纳法索，运送俄罗斯军人，教官，后勤人员。所有这些分散的有时彼此相距一千公里的部署，都证明莫斯科正在加强其在利比亚东部和中部的存在，以建立一条贯通萨赫勒地区的线路并实现其在利比亚建立军事基地的梦想。                    </strong></p><div><p>这是近日发表在法国《观点》杂志非洲版上的一篇题为《俄罗斯在利比亚安家》的长文的开篇，这篇关注俄罗斯非洲军团动向的文章接下来指出，对于一个发迹于西伯利亚大草原的发展中国家，选择利比亚展现出不同寻常的地理和地缘政治灵活性。利比亚这个国土面积三倍于法国的国家，坐拥1770公里的地中海海岸，隔海与意大利和希腊相望，它同时还与埃及、苏丹、乍得，尼日尔（萨赫勒）、突尼斯和阿尔及利亚（马格里布）接壤。这个国家面临着四股热点问题的挑战：圣战主义、走私，非法移民及正在肆虐苏丹的军事冲突……利比亚对于“非洲军队”来说是一个绝佳的机会。自2011年利比亚爆发革命推翻卡扎菲四十年独裁统治以来，在北约国家的军事干预及包括土耳其、阿联酋、卡塔尔、俄罗斯多国军事介入下，利比亚一直处于南北分裂状态，该国也是通往撒哈拉和萨赫勒地区的门户。</p><p>所谓俄罗斯“非洲军队”是指克里姆林宫的新军队，前身是已故普里戈金的瓦格纳雇佣军。“非洲军团”名称来自二次大战时驰骋北非的一支德国远征军，帅将为德国陆军元帅隆美尔。</p><p>2024年，整个萨赫勒地区危机四伏，自第二次世界大战以来，撒哈拉沙漠从未经历过如此的惊心动魄。马里、布基纳法索、尼日尔三国军头先后发动军事政变，轻易将曾经的宗主国法国的军事存在驱逐出境，同时投入克里姆林宫的怀抱。4月10号，一架装饰着俄罗斯国旗的白色宽体飞机降落在尼亚美机场，在飞机引擎震耳欲聋的噪音中，俄新社的记者对首批俄罗斯非洲军团士兵抵达尼日尔进行了评论，他说，“这意味着俄罗斯正在重返非洲”。事实上，莫斯科已经出现在从利比亚到苏丹、从萨赫勒到中非共和国的各个地区。继马里和布基纳法索之后，第三个由叛变军人领导的萨赫勒国家进一步成为西非亲俄阵营的成员。</p><p>尼日尔是克里姆林宫的一张王牌。这个人口两千五百万的国家位于世界最不稳定地区，是世界上最贫穷的国家之一，也是非洲向欧洲输送非法移民的集散地。尼日尔军头推翻民选总统巴祖姆后，这个曾经一直是萨赫勒地区欧美可靠盟友的国家，开始执政，先切断与法国的联系，关闭大使馆，要求一千五百名法国驻军离境，随后又撕毁与美国的安全协议，驱逐美国驻军，拒绝欧盟在阿加德兹执行其移民任务。走私不再被定为犯罪，它已被新颁布的法令合法化。去年12月，俄罗斯国防部副部长埃夫库罗夫 (Younous-bek Evkourov) 上将首次访问尼亚美，并与尼日尔签署了“加强安全合作”的秘密防务“协议”。 一个半月后，尼日尔过渡政府首脑扎伊纳率领一个大型部长级代表团访问了俄罗斯。2023年9月，在俄罗斯支持下，萨赫勒国家联盟成立，成员国马里，布基纳法索和尼日尔同时宣布脱离西非国家经济共同体。自此，尼日尔，这个萨赫勒地区曾经的欧美盟友彻底倒向俄罗斯。</p><p>法国国防部国际关系与战略总局下属军事学校战略研究所(IRSEM)俄罗斯影响力专家奥迪内特（Maxime Audinet）表示：“非洲军团抵达尼日尔标志着俄罗斯在该地区的持续扩张，并得到萨赫勒国家联盟（AES）制度化支持，莫斯科正通过这个新晋联盟施加影响力”。他说：“我们正在见证后普里戈金时代俄罗斯在萨赫勒地区的存在，这是由俄罗斯军事情报部门（GRU）和国防部精心策划的，他们正试图重新控制瓦格纳在非洲的遗产。”</p><p>俄罗斯正在非洲陷入危机的国家一步步确立自己的地位，与那些向克里姆林宫寻求安全保护的政变军头同谋，强加反西方议程。然而，达喀尔安全研究院高级研究员吉比·索乌表示：“非洲伙伴很快会明白，与俄罗斯的这种关系不会让他们如愿以偿，特别是在经济发展方面，因为中国、欧盟、美国以及现在的印度和土耳其在经济贸易上远远超过莫斯科。”</p><p>根据易卜拉欣基金会2023年8月发布的分析报告；俄罗斯仅占非洲出口总额的1.8%，而欧盟为26.7%，中国为19.9%，印度为5.6%。俄非贸易以原材料出口为主，这些原材料对非洲大陆的经济几乎没有附加值。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%A1%91%E9%9B%A8/" title="桑雨">桑雨</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
