--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713431701000-->
-[德中签协共享汽车数据](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE)
+<!--1713438901000-->
+[中国34岁网红“飞飞一杯酒”疑心脏病猝死 冲热搜第一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2-%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92-%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB-%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80)
 ------
 
-<div>18/04/2024 - 10:43</div><img src="https://s.rfi.fr/media/display/87997fee-fcb5-11ee-be18-005056bfb2b6/w:1280/p:16x9/AP24107536582728.jpg"><p><strong>德国和中国签署了一份在自动驾驶和互联驾驶方面进行合作的联合声明，德国希望该声明将使汽车制造商能够将数据从中国传输到德国。这项合作被认为是德国总理朔尔兹访华的另一个成果，但数据共享这对于在华外国企业来说是一个有争议的话题。        </strong></p><div><p>据路透社报道称，德国与中国两国将共同制定共享标准和规则，以管理企业开发自动驾驶时产生的数据，德国汽车协会 VDA 表示此举将节省开发和生产资源。</p><p>该声明发布之际，欧盟和美国越来越担心中国技术进入欧美市场并在当地收集数据可能存在的安全风险，华盛顿于二月份对中国汽车进口可能存在的国家安全风险展开调查。</p><p>然而，包括大众汽车中国区总裁在内的欧洲商界领袖对中国对从中国向欧洲传输数据的限制表示失望，这些限制比欧洲对从欧洲向中国传输数据的规定要严格得多。</p><p>中国加强了对国内数据管理的监管，大多数行业在数据转移到国外之前必须申请许可。</p><p>去年，中国当局收紧了汽车行业的数据规则，并提议禁止中国的智能汽车直接将数据传输到国外，迫使它们转而使用国内的云服务。</p><p>然而，中国监管机构此后表示立场会有所软化，因为企业抱怨法律缺乏明确性，以及这些法律可能会给他们的业务带来多么繁重和破坏性的影响。</p><p>根据德国声明称，该合作将为进一步讨论该主题提供空间，强调尚未达成共识，并主张“德国和欧盟企业在这一领域做出切实改进”。</p><p>自动驾驶汽车通过激光雷达和传感器收集有关乘客和驾驶员行为以及汽车周围环境的大量数据。汽车还通过与手机和其他设备的链接收集越来越多的驾驶数据。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWl6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E5%25BE%25B7%25E4%25B8%25AD%25E7%25AD%25BE%25E5%258D%258F%25E5%2585%25B1%25E4%25BA%25AB%25E6%25B1%25BD%25E8%25BD%25A6%25E6%2595%25B0%25E6%258D%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWl6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 11:53</div><img src="https://s.rfi.fr/media/display/726932c2-fd69-11ee-8493-005056a90284/w:1280/p:16x9/whts.jpg"><p><strong>在中国微博、抖音拥有89万、51万粉丝的中国网红“飞飞一杯酒”是知名酒类博主，号称“喝了几千款，永远差一杯”。17日晚间突传该网红死讯。        </strong></p><div><p>据自由时报今天报道称，34岁网红飞飞一杯酒心脏病猝死 过世当天还更新影片。“飞飞一杯酒”死讯曝光后，随即冲上微博热搜第一名，他的微博号昨晚也发讣闻，指他15日因心脏病突发在河南省中医院过世，享年34岁。</p><p>讣闻中形容“飞飞一杯酒”一生“出生、读书、画画”、“喝酒、侃酒、交友”，“结婚、生子、离去”，走完了一生；但更让人不舍的是，他的微博在15日下午4时30分还更新影片，让许多网友留言不舍哀悼一路走好，并推测其死因可能与生活长期熬夜和饮酒有关。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWlt.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E4%25B8%25AD%25E5%259B%25BD34%25E5%25B2%2581%25E7%25BD%2591%25E7%25BA%25A2-%25E9%25A3%259E%25E9%25A3%259E%25E4%25B8%2580%25E6%259D%25AF%25E9%2585%2592-%25E7%2596%2591%25E5%25BF%2583%25E8%2584%258F%25E7%2597%2585%25E7%258C%259D%25E6%25AD%25BB-%25E5%2586%25B2%25E7%2583%25AD%25E6%2590%259C%25E7%25AC%25AC%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWlt.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
