--- a/articles/rfi/999988.md
+++ b/articles/rfi/999988.md
@@ -1,5 +1,5 @@
-<!--1713392101000-->
-[欧盟要求 TikTok 就其向用户付费的奖励服务做出解释](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82-tiktok-%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A)
+<!--1713431701000-->
+[台湾环保组织谈PFAS污染研究及对策 - 环境与发展](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E5%A2%83%E4%B8%8E%E5%8F%91%E5%B1%95/20240418-%E5%8F%B0%E6%B9%BE%E7%8E%AF%E4%BF%9D%E7%BB%84%E7%BB%87%E8%B0%88pfas%E6%B1%A1%E6%9F%93%E7%A0%94%E7%A9%B6%E5%8F%8A%E5%AF%B9%E7%AD%96)
 ------
 
-<div>17/04/2024 - 18:00</div><img src="https://s.rfi.fr/media/display/db5c5a90-ec41-11ee-aeab-005056bfb2b6/w:1280/p:16x9/gettyimages-1191303754.jpg"><p><strong>本周三（4月17号），欧盟委员会要求社交网络 TikTok （ 海外版抖音） 就其在法国和西班牙推出的奖励观看视频的新服务所带来的成瘾风险做出解释。        </strong></p><div><p>  4 月 11 日，TikTok 宣布在法国和西班牙推出新服务 TikTok Lite。 TikTok Lite 有一项针对 18 岁及以上用户的新功能："奖励计划"，允许用户通过完成 TikTok 上的某些 "任务 "获得积分，如观看视频、点赞、关注创作者、邀请朋友加入 TikTok 等。这些积分可以兑换成奖励，如亚马逊优惠券、贝宝礼品卡或 TikTok 币（可用于给创作者小费）。</p><p>法新社报道， 欧盟行政机构解释说，已要求中国字节跳动集团旗下的 TikTok 提供 "风险评估的细节"，并强调"在欧盟推出新的 TikTok Lite 应用程序之前本应进行风险评估"。</p><p>该委员会说："这涉及到新的“奖励” 程序对保护未成年人和用户心理健康的潜在影响，特别是在可能刺激成瘾行为方面。”</p><p>这项正式请求是在欧洲新数字服务立法（DSA）的背景下提出的，该立法自去年起对包括 TikTok 在内的 22 家主要互联网公司实施了更严格的规定，以保障用户的安全。</p><p>欧盟委员会目前是欧盟的数字监管机构，有权监督和处罚违规者。本周三启动的程序并非首次涉及 TikTok。</p><p>TikTok 必须在 24 小时内提交对新申请的 "风险评估"，并在 4 月 26 日前回答一系列问题。</p><p>周三宣布的信息请求在现阶段并不构成质疑。但这是程序的第一步，一旦证实违反规定，可能会启动正式调查，并最终受到严厉的经济处罚。</p><p> 报道称， 欧盟委员会已于 2024 年 2 月对 TikTok 提起正式诉讼，怀疑其在未成年人保护、广告透明度、研究人员获取数据以及与其应用程序的成瘾性设计和有害内容有关的风险管理等方面违反了《DSA》。委员会目前正在收集更多证据。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWf2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25AC%25A7%25E7%259B%259F%25E8%25A6%2581%25E6%25B1%2582-tiktok-%25E5%25B0%25B1%25E5%2585%25B6%25E5%2590%2591%25E7%2594%25A8%25E6%2588%25B7%25E4%25BB%2598%25E8%25B4%25B9%25E7%259A%2584%25E5%25A5%2596%25E5%258A%25B1%25E6%259C%258D%25E5%258A%25A1%25E5%2581%259A%25E5%2587%25BA%25E8%25A7%25A3%25E9%2587%258A&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A%20-%20https%3A%2F%2Frfi.my%2FAWf2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A%20-%20https%3A%2F%2Frfi.my%2FAWf2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWf2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 10:45</div><img src="https://s.rfi.fr/media/display/1ec5bb4c-fccc-11ee-9768-005056a90284/w:1280/p:16x9/Screenshot%202024-04-17%20at%2017-05-27%20%E5%BE%9E%E9%9B%B6%E9%96%8B%E5%A7%8B%E8%AA%8D%E8%AD%98PFAS.png"><p><strong>法广在近期的节目中向大家介绍了美国以及欧洲国家的卫生机构对化学污染物PFAS的环境以及人体健康影响的评估，同时也向大家介绍了西方各国针对PFAS污染所采取的限制以及检测措施。鉴于PFAS污染无处不在，全世界各国的水土以及空气都受到了PFAS污染，那么，作为信息开放的台湾，台湾的PFAS污染状况如何？我们知道，台湾的半导体行业已经成为台湾的镇国之宝，而半导体产业链的各大环节都离不开带有PFAS的产品，台湾半导体行业对此有何对策？台湾政府针对PFAS污染又出台了哪些措施？                    </strong></p><div><p>就以上问题，法广电话采访了关注PFAS污染多年的<a href="https://www.taiwanwatch.org.tw/node/1520" target="_blank">看守台湾组织</a>的研究员林弈均先生 :</p><p><strong>法广：</strong>林先生，您好，非常感谢您接受法广的采访！首先请您介绍一下看守台湾是一个什么样的组织。</p><p><strong>林弈均：</strong>我们的协会算成立于1999年，是一个比较老的环保组织，我们主要关注台湾的生态与环境议题，我们的目标是“永续台湾”。我们一半以上的工作主要是翻译一些国外的先进的研究文章，将它们介绍给台湾的民众。其他关注的主要的议题就是台湾的废弃物，包括一些带有毒性的废弃物，一些工厂和企业对外排放的废弃物。</p><p><strong>法广：</strong>现在国际上都十分关注这些被叫做永久污染物的化学物质PFAS，你们关注这一话题已经很长时间，能否向大家介绍一下台湾的PFAS的污染现状以及政府采取的一些应对措施？</p><p><strong>林弈均：</strong>老实说，台湾政府还没有对这些污染物进行彻底的检查，政府定期调查的是国际上都调查的五种PFAS，也就是PFOA、PFOS、LPOS、POSF＋PFHxS，但是，没有去做进一步的工作。不过，台湾的学者很早就对这些污染物对人体健康进行了研究，其中最具有影响的就是台灣公共衛生學會理事長、台大環境與職業健康科學研究所特聘教授陳保中先生，他从2011年就发表论文，针对PFOA与PFOS在孕妇身体中的浓度对新生儿的影响，例如造成新生儿发育缓慢等等方面的缺陷，他的研究证明这两者之间的关联是十分密切的。去年，我们还同菲律宾的一位教授相合作，这位教授对菲律宾的一些在PFAS浓度高的工厂工作的妇女进行了调查，结果发现这些妇女的乳腺癌的发病率高于其他妇女。所以，学术界对PFAS引发癌症方面的研究已经有许多。另外。在PFAS对环境的污染方面，我们也已经有环境工程的学者在2009年和2014年对水中的鱼类进行了检测，结果发现受到工业园区污水污染的水中的鱼身上的PFAS的含量比其他鱼的PFAS浓度高出两百倍。</p><p><strong>法广：</strong>也就是说PFAS污染对环境以及人体健康造成的危害在台湾学术界已经成为共识，那么，台湾PFAS的污染的源头是什么？</p><p><strong>林弈均：</strong>其实，据我们了解，台湾基本上没有生产PFAS的厂家，总共只有一家生产PFAS的工厂，所以，台湾的PFAS污染主要来自进口的产品，或者是进口的原材料，用于半导体或者别的产业。</p><p><strong>法广：</strong>您知道半导体产业为什么使用PFAS以及使用的量是多少吗？</p><p><strong>林弈均：</strong>其实我们在台湾也很难获得这方面的信息，因为政府与企业都以工业机密为由拒绝回答，这也是我们为什么很难获得那家生产PFAS的企业的信息。根据我们从国外的有关半导体产业的介绍，我们了解到半导体制造业在生产电路板时就使用PFAS产品，因为它可以在非常薄的状况下发挥阻热，阻湿等功能，甚至还可以阻电，可以当作隔离层，而且成本 还十分低廉。</p><p><strong>法广：</strong>那么，台湾政府是否出台一些措施来应对PFAS污染，台湾政府也同中国政府一样签署了《关于持久性有机污染物的斯德哥尔摩公约》，那具体有些什么效果？</p><p><strong>林弈均：</strong>是的，台湾政府就是跟着公约走，台湾政府确实跟进得很快，但是，公约虽然具有强制性，但是，它必须符合一百多个国家的利益，所以，他的节奏是十分缓慢的，倘若台湾仅仅跟着公约走，那么，我们环保组织认为是远远不够的，尤其是我们看到欧美国家都在出台更加严厉的措施。</p><p><strong>法广：</strong>那台湾政府是否也有这方面的计划，或者作为环保组织你们期待政府能够立即采取哪些措施？</p><p><strong>林弈均：</strong>我们目前正在与政府交涉，首先要求政府必须禁止所有PFAS产品，而不是一个一个地去禁止，因为PFAS总共有超过一万多个产品，被用于商业用途的超过四千种，倘若一个个地禁止的话，那么，台湾的整个空气，土地与水早就被严重污染了。这也是为什么所有国际的环保组织都要求全面禁止PFAS的原因所在。另外，我们的第二个诉求就是禁止使用所有非必要的PFAS产品，我们最近同一个国际组织共同做了一个食品包装物上的PFAS检测，检测的结果八个样本中有七个都有PFAS，这些PFAS很可能通过食物进入人体，而这些PFAS的使用其实并没有必要，不使用PFAS至多不过是麻烦一些，而且，有些物品的替代物早已被找到。所以我们要求政府必须立即禁止在食品包装中使用PFAS。所以，以上就是在短期内我们对政府提出的两个诉求。</p><p>非常感谢看守台湾组织的研究员林弈均先生接受法广的专访！</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
