--- a/articles/rfi/999989.md
+++ b/articles/rfi/999989.md
@@ -1,5 +1,5 @@
-<!--1713390303000-->
-[印度计划如何减低对中国太阳能技术设备的依赖？ - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240417-%E5%8D%B0%E5%BA%A6%E8%AE%A1%E5%88%92%E5%A6%82%E4%BD%95%E5%87%8F%E4%BD%8E%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%A4%AA%E9%98%B3%E8%83%BD%E6%8A%80%E6%9C%AF%E8%AE%BE%E5%A4%87%E7%9A%84%E4%BE%9D%E8%B5%96)
+<!--1713431701000-->
+[德中签协共享汽车数据](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE)
 ------
 
-<div>17/04/2024 - 16:52</div><img src="https://s.rfi.fr/media/display/824afafe-0f93-11ea-b5cd-005056a99247/w:1280/p:16x9/2014-09-17T145549Z_1102159084_GM1EA9H1RKC01_RTRMADP_3_CHINA-SOUTHASIA-INDIA_0.JPG"><p><strong>印度政府如何能够在开发太阳能资源的同时避免对中国新能源科技的依赖？印度政府近期宣布从4月1日起重启太阳能光伏组件的进口限制，此举是否足以推动“印度制造”产品的发展吗                    </strong></p><div><p>印度将于明天周五启动为时六周的立法选举，印度各地九亿多选民将先后于七个投票日投票，之所以要错开投票时间，是为了便于安保人员守护全国各地的投票站，投票结果将于六月四日公布。选前的民调显示，印度总理莫迪所在的人民党（Bharatiya Janata Party）有望获得第三次胜利，莫迪所面对的最大的对手是以国大党（Indian National Congress）为首的政党联盟。</p><p>这个由20多个政党组成的反对党联盟的名称叫做“印度国家发展包容性联盟”（Indian National Developmental Inclusive Alliance），此次选举的关键议题除了反对党联盟所提出的要避免印度越来越“滑向专制”之外，就是年轻人的就业等经济议题。而在经济议题中，中印合作尤其是在可再生能源领域的合作议题举足轻重，因为这不仅是印度这一碳排放大国能源转型的一大关键性的一步，而且也涉及印度如何处理与他在地缘政治舞台上的一大对手中国之间的双边关系。</p><p>众所周知，早在2015年巴黎气候峰会期间，印度政府就做出了在2030年之前实现500吉瓦的可再生能源的承诺，2018年，43个国家的政府首脑和部长在印度首都新德里出席了国际太阳能联盟的成立大会，该联盟的理念是在共享价值观、经验和资源的基础上为清洁能源创造一个共同的市场。然而，尽管印度的自然日照条件远远领先于其他国家，到2021年年底印度的光伏发电累计装机容量仅为60.4GW，远远低于中国的308吉瓦，位居中国，欧盟，美国以及日本之后。而且，印度的太阳能设备组件主要依赖进口，而且其中超过50%来自中国。</p><p>那么，印度政府如何能够在开发太阳能资源的同时避免对中国新能源科技的依赖？印度政府近期宣布从4月1日起重启太阳能光伏组件的进口限制，此举是否足以推动“印度制造”产品的发展吗？</p><p>就以上问题，法广电话采访了印度新德里尼赫鲁大学国际问题研究院东亚研究中心的主席，汉学家谢钢教授。</p><p>谢刚教授就印度针对来自中国的太阳能部件抬高关税的策略评论说：</p><p>“中国从2021年起向印度出口的硅胶，电池片，接线盒等太阳能部件占印度总进口量的60%至70%，但是，由于地缘政治的影响，印度对中印边界2020年发生的冲突记忆犹新，因此，新德里的决策首先是出于地缘政治方面的考量；其次，我们也看到一些贸易上的风险，尤其是在新冠疫情期间，对印度的进口曾经产生巨大影响，这是印度政府限制太阳能电池板进口的另一大考量。鉴于以上原因，印度期待发展自身的太阳能产业，当然，新产业的开发需要时间，不可能一蹴而就，在此期间，印度对中国的太阳能工业依然十分依赖。此外，另一个原因是中国在2003年对日本实施的稀土禁运，以及美国对中国的芯片封锁等等，这一切都使印度意识到倘若有朝一日，中国也对印度实施太阳能设备禁运，这将对印度全国产生的灾难性的影响，因此，印度政府鼓励印度国内的企业例如阿达尼集团（Adani Solar）等开发自己的新能源产业，阿达尼在印度各地安置了许多太阳能设备，另外，印度的石油能源集团也开始发展产业多元化，投资开发太阳能工厂。在发展本国太阳能产业的同时，印度还着手寻找中国之外的新的太阳能供应国，比如说法国，法国的道达尔集团在南非开设了太阳能电池板生产工厂，因为我们知道，巴黎气候协定制定了一个能源过渡的时间表与融资途径，联合国第26届气候峰会提出了一个协助南非走出煤炭的能源过渡计划，为南非的新能源产业的开发提供了融资，印度期待能够进口更多来自欧洲的产品，以便减低印度对中国设备的依赖，另外，印度计划斥资2000亿美元以推动国内的太阳能产业的发展，以上是印度推出的缓解对中国太阳能产品依赖的一系列措施。”</p><p>非常感谢印度新德里尼赫鲁大学国际问题研究院东亚研究中心的主席，汉学家谢钢教授接受法广的采访。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 10:43</div><img src="https://s.rfi.fr/media/display/87997fee-fcb5-11ee-be18-005056bfb2b6/w:1280/p:16x9/AP24107536582728.jpg"><p><strong>德国和中国签署了一份在自动驾驶和互联驾驶方面进行合作的联合声明，德国希望该声明将使汽车制造商能够将数据从中国传输到德国。这项合作被认为是德国总理朔尔兹访华的另一个成果，但数据共享这对于在华外国企业来说是一个有争议的话题。        </strong></p><div><p>据路透社报道称，德国与中国两国将共同制定共享标准和规则，以管理企业开发自动驾驶时产生的数据，德国汽车协会 VDA 表示此举将节省开发和生产资源。</p><p>该声明发布之际，欧盟和美国越来越担心中国技术进入欧美市场并在当地收集数据可能存在的安全风险，华盛顿于二月份对中国汽车进口可能存在的国家安全风险展开调查。</p><p>然而，包括大众汽车中国区总裁在内的欧洲商界领袖对中国对从中国向欧洲传输数据的限制表示失望，这些限制比欧洲对从欧洲向中国传输数据的规定要严格得多。</p><p>中国加强了对国内数据管理的监管，大多数行业在数据转移到国外之前必须申请许可。</p><p>去年，中国当局收紧了汽车行业的数据规则，并提议禁止中国的智能汽车直接将数据传输到国外，迫使它们转而使用国内的云服务。</p><p>然而，中国监管机构此后表示立场会有所软化，因为企业抱怨法律缺乏明确性，以及这些法律可能会给他们的业务带来多么繁重和破坏性的影响。</p><p>根据德国声明称，该合作将为进一步讨论该主题提供空间，强调尚未达成共识，并主张“德国和欧盟企业在这一领域做出切实改进”。</p><p>自动驾驶汽车通过激光雷达和传感器收集有关乘客和驾驶员行为以及汽车周围环境的大量数据。汽车还通过与手机和其他设备的链接收集越来越多的驾驶数据。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWl6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E5%25BE%25B7%25E4%25B8%25AD%25E7%25AD%25BE%25E5%258D%258F%25E5%2585%25B1%25E4%25BA%25AB%25E6%25B1%25BD%25E8%25BD%25A6%25E6%2595%25B0%25E6%258D%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWl6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
