--- a/articles/rfi/999990.md
+++ b/articles/rfi/999990.md
@@ -1,5 +1,5 @@
-<!--1713390302000-->
-[《法兰克福汇报》：中国是乌克兰战争的赢家之一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5-%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80)
+<!--1713406501000-->
+[拜登要保护美国钢铁和造船业免受中国不公平竞争影响 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240417-%E6%8B%9C%E7%99%BB%E8%A6%81%E4%BF%9D%E6%8A%A4%E7%BE%8E%E5%9B%BD%E9%92%A2%E9%93%81%E5%92%8C%E9%80%A0%E8%88%B9%E4%B8%9A%E5%85%8D%E5%8F%97%E4%B8%AD%E5%9B%BD%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%E5%BD%B1%E5%93%8D)
 ------
 
-<div>17/04/2024 - 22:39</div><img src="https://s.rfi.fr/media/display/cdb0f69a-fc7b-11ee-9d62-005056bfb2b6/w:1280/p:16x9/scholz%20china.jpg"><p><strong>德国媒体如何看待朔尔茨总理的访华之行？        </strong></p><div><p>科布伦茨出版的《莱茵报》指出：德国总理的中国之行始终是在保护经济利益和需要在某个问题上采取明确立场之间进行艰难的平衡行为。在经济方面，朔尔茨做出了决定。在这里，他不再寻求平衡，而是跳下了钢丝，站在了商业伙伴一边。</p><p>马格德堡出版的《人民之声报》表示，中国领导人习近平和朔尔茨总理谈了几个小时。其中几乎没有产生任何有形的东西。北京是块光滑的地板。中国人希望为乌克兰的和平而努力，但要按照他们的条件来进行。中国希望深化与德国的经济关系，但要求放弃保护主义。德国方面则要求在华投资时享受与国内企业同等的待遇。曾经有信任的地方现在却充满了怀疑。谁知道共产主义中国明天会不会进攻台湾呢？</p><p>《新奥斯纳布吕克报》写道：龙年，德国感受到中国的热气吹在脖子上。人们不应期待，朔尔茨总理访问中国，然后一切就都会发生变化，甚至会更好。习近平宣布的国家目标最终是中华民族的复兴。不仅个人内部的权利和自由必须服从于此，外交政策关系的设计也必须考虑到这一点。 但如果德国因此而陷入郁闷中，那将是个错误。</p><p>哈勒出版的《中德意志报》表示，在朔尔茨与习近平讨论的所有事情中，必须始终牢记普京最强大的盟友就坐在他的对面。只要侵略乌克兰的战争不伤害中国，但削弱欧洲的安全和经济，习近平就会安然地袖手旁观。无论如何，很难相信拥有14亿公民的核大国会弱到无法影响普京的地步。但以色列和俄罗斯伙伴伊朗之间的中东局势升级、该地区的战火以及两场重大战争对整个国际秩序的破坏则可能对中国构成更大的威胁。</p><p>《法兰克福汇报》分析称：迄今为止，中国可以算得上是乌克兰战争的赢家之一。因此，习近平在德国总理朔尔茨面前主张和平解决，但继续不愿意指出罪恶的根源，更不愿阻止普京，也就不足为奇。看似独立的俄罗斯殖民地“乌克兰”将是一个可能令中国满意的“和平解决方案”。由于俄罗斯事实上已发展成为中国的原材料殖民地，这最终意味着其势力范围的扩大。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E6%25B3%2595%25E5%2585%25B0%25E5%2585%258B%25E7%25A6%258F%25E6%25B1%2587%25E6%258A%25A5-%25E4%25B8%25AD%25E5%259B%25BD%25E6%2598%25AF%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%2588%2598%25E4%25BA%2589%25E7%259A%2584%25E8%25B5%25A2%25E5%25AE%25B6%25E4%25B9%258B%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 21:00</div><img src="https://s.rfi.fr/media/display/73a8772a-f6f1-11ee-b8cd-005056bfb2b6/w:1280/p:16x9/2024-04-10T023842Z_2041466065_RC2VT6ATFRE2_RTRMADP_3_ISRAEL-PALESTINIANS-BIDEN.JPG"><p><strong>正在进行竞选连任的美国总统拜登17日表示将以对抗“不公平竞争”为由，敦促对中国钢铁和铝征收3倍关税。美国贸易代表办公室（USTR）也在同一天宣布将对中国在造船、海运和物流领域的贸易行为展开调查，以回应美国5个工会近期的请愿。                    </strong></p><div><p>拜登和他的竞选对手特朗普都在争夺至关重要的蓝领选民，并承诺将重振美国制造业。特朗普曾发誓: 要对中国等国家增加关税。拜登则在17日对匹兹堡的钢铁工人发表讲话，公布多项取悦钢铁工人的措施，包括将特朗普政府对中国钢铁产品征收的7.5%的关税提高到25%、向墨西哥施压禁止中国转道墨西哥向美国销售钢铁及铝产品，同时对中国在造船、海事及物流领域的贸易做法启动可能导致更高关税的反倾销调查。</p><p>白宫发表声明说：“中国对其国内钢铁和铝业的政策和补贴，意味着高品质的美国产品被以人为压低价格的中国替代品所削弱，而中国替代品生产过程的碳排放更高。”一名美国资深官员告诉媒体，中国占全球钢铁产量的一半，并以远低于美国钢铁的价格对外出口。</p><p>拜登总统宣布的对中国钢铁和铝产品提高征收关税，还有待于美国贸易代表办公室在完成对特朗普总统时期的关税进行审核后的批准。美国贸易代表戴琪（Katherine Tai）4月16日在众议院表示，她的办公室“非常接近于完成”对中国关税的审核。</p><p>据白宫17日发表的情况说明书，拜登政府宣布采取新行动，是为了保护美国钢铁和造船业免受中国不公平行为的影响。有以下五大理由：</p><p>第一：美国工人继续面临来自中国进口钢铁和铝产品的不公平竞争，这些产品是世界上排放最密集的产品之一。</p><p>第二，拜登总统上任以来，商务部已对钢铁相关产品征收30多项反倾销和反补贴税，还对中国出口商的反竞争行为以及中国等国家规避贸易规则的行为进行了近 27 项调查。</p><p>第三，拜登总统正在指示他的高级团队与墨西哥合作，共同防止中国和其他国家逃避从墨西哥进口到美国的钢铝关税。 </p><p>第四，美国贸易代表正在对中国在造船、海事和物流领域的不公平贸易行为发起调查。这项调查是在美国钢铁工人联合会（USW）和其他四个工会提交请愿书之后进行的。</p><p>第五，拜登总统正在投资清洁的美国制造钢铁。今天的公告建立在政府对绿色钢铁生产的承诺之上。</p><p>美联社评论说，拜登总统提高对中国钢铁产品进口关税的举动，反映了拜登政府的国际贸易政策，与其争取关键摇摆州选票的努力出现交集的情况。不过，白宫坚称，这更是为了保护美国制造业免受中国不公平贸易做法之害，而不仅仅是为了激发工会成员的投票热情。</p><p>有分析表示，白宫此举可能会激怒北京中南海。另外，此举的经济风险还在于：对中国钢铁及铝产品征收更高关税，将可能使钢铁与铝产品成本价格升高，也将提升汽车、建筑材料和其他关键消费者产品的成本和价格。尽管美国的高通胀已是拜登总统的政治包袱，但拜登总统转向贸易保护主义，更是与其竞争对手特朗普的政策看齐。而所谓的301条款调查则是当年特朗普政府在与北京当局贸易战中的主要工具，用来证明征收关税的合理性。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div>
