--- a/articles/rfi/999998.md
+++ b/articles/rfi/999998.md
@@ -1,5 +1,5 @@
-<!--1713374101000-->
-[视频 俄乌战争 俄攻击乌北部城市切尔尼戈夫 已有10人死亡](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E8%A7%86%E9%A2%91-%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89-%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB-%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1)
+<!--1713390302000-->
+[卡梅伦称以色列已决定报复伊朗](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97)
 ------
 
-<div>17/04/2024 - 15:49</div><img src="https://s.rfi.fr/media/display/37df5d2e-fca2-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-17T092616Z_1357906527_RC2987AJQIZX_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>俄罗斯今天周三对乌克兰北部城市切尔尼戈夫（Chernihiv）发动的飞弹袭击，造成至少10名居民丧生，并损坏建筑物和市政基础设施，乌克兰总统泽连斯基呼吁西方提供军援，请看France24埃玛纽埃尔-夏泽（Emmanuelle Chaze）报道。        </strong></p><div><p>俄罗斯今天周三对乌克兰北部城市切尔尼戈夫（Chernihiv）发动的飞弹袭击，造成至少10名居民丧生。</p><p>俄罗斯入侵乌克兰的战争持续，乌克兰总统泽连斯基多次发表令人震惊的言论指出，如果没有美国资金支持乌克兰会输掉这场战争。</p><p>目前美国国会仍在阻挠提供6百亿美元对乌克兰的军援。</p><p>乌克兰总统泽连斯基近期刚刚签署了一项有争议的法律，要延长服役时间并加大惩罚逃兵。</p><p>就在这个背景下，乌克兰北部城市切尔尼戈夫镇在本周三上午遭到俄军袭击 。</p><p>France24 驻乌克兰的记者埃玛纽埃尔-夏泽报道，切尔尼戈夫镇 死亡人数很高，目前至少有10人死亡 20多人受伤，死亡人数很可能会上升，急救人员仍在现场。</p><p>切尔尼戈夫镇距离首都基辅大约两三个小时的车程，这里今天至少被三枚俄罗斯导弹击中。</p><p>乌克兰总统泽连斯基在社交网络上说，说如果乌克兰有自卫手段，就是有有效的防空手段那么悲剧就不会发生。</p><p>乌克兰总统指责其盟国缺乏提供军备的决心。</p><p>此前乌克兰外交部长库列巴曾要求盟国提供至少七套爱国防空系统以保护乌克兰最大的城市，如哈尔科夫和敖德萨等 。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWdJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25BF%2584%25E4%25B9%258C%25E6%2588%2598%25E4%25BA%2589-%25E4%25BF%2584%25E6%2594%25BB%25E5%2587%25BB%25E4%25B9%258C%25E5%258C%2597%25E9%2583%25A8%25E5%259F%258E%25E5%25B8%2582%25E5%2588%2587%25E5%25B0%2594%25E5%25B0%25BC%25E6%2588%2588%25E5%25A4%25AB-%25E5%25B7%25B2%25E6%259C%258910%25E4%25BA%25BA%25E6%25AD%25BB%25E4%25BA%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1%20-%20https%3A%2F%2Frfi.my%2FAWdJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1%20-%20https%3A%2F%2Frfi.my%2FAWdJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWdJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/191b3272-fb13-11ee-ba96-005056bfb2b6/w:1280/p:16x9/AP24071526557302.jpg"><p><strong></strong></p><div><p>卡梅伦在访问耶路撒冷之初对记者表示：“很明显，以色列人正在决定采取行动。”“我们希望他们这样做的方式尽可能不让事态升级。”</p><p>他说，此行的主要目的是“让世界的注意力重新回到人质状况上”，并敦促哈马斯同意临时停火协议。“真正需要的是，重新关注哈马斯，重新关注人质，重新关注提供援助，重新关注加沙冲突的暂停。”</p><p>访以结束后，卡梅伦将前往意大利参加七国集团部长级会议，并在会上推动对伊朗实施制裁。同一天，德国外长贝尔伯克（Annalena Baerbock）也到访了以色列。</p><p>以色列总理办公室发表声明，指内塔尼亚胡感谢两国为挫败伊朗袭击提供前所未有的支持，但表明在遭受伊朗袭击后，以色列有权自身作出决定，采取必要措施保卫自己。</p><p>贝尔伯克说，已经向内塔尼亚胡表明，绝不能让中东陷入完全不可预测的局面，所有人都必须谨慎和负责任行事。</p><p>卡梅伦较早时就向传媒表示，以色列显然已经决定对伊朗早前发起的无人机和导弹袭击作出回应，他希望以色列尽量避免局势升级。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWh2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E5%258D%25A1%25E6%25A2%2585%25E4%25BC%25A6%25E7%25A7%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%25B7%25B2%25E5%2586%25B3%25E5%25AE%259A%25E6%258A%25A5%25E5%25A4%258D%25E4%25BC%258A%25E6%259C%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWh2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWh2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWh2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
