--- a/articles/rfi/999999.md
+++ b/articles/rfi/999999.md
@@ -1,5 +1,5 @@
-<!--1713374101000-->
-[中国以规避手法支持莫斯科的武器生产](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7)
+<!--1713390302000-->
+[澳防长：冷战后指导国防规划的乐观假设早已不复存在 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240417-%E6%BE%B3%E9%98%B2%E9%95%BF-%E5%86%B7%E6%88%98%E5%90%8E%E6%8C%87%E5%AF%BC%E5%9B%BD%E9%98%B2%E8%A7%84%E5%88%92%E7%9A%84%E4%B9%90%E8%A7%82%E5%81%87%E8%AE%BE%E6%97%A9%E5%B7%B2%E4%B8%8D%E5%A4%8D%E5%AD%98%E5%9C%A8)
 ------
 
-<div>17/04/2024 - 13:54</div><img src="https://s.rfi.fr/media/display/e88ddb60-9efc-11ec-81cd-005056a97e36/w:1280/p:16x9/000_324M8XM.jpg"><p><strong>尽管美国和英国于12日的周五宣布禁止进口俄罗斯生产的铝、铜和镍，但莫斯科却绕过欧洲的制裁，转向北京寻求对其战斗乌克兰的支持。中国支持莫斯科的武器生产，这是《世界报》经济记者让-米歇尔·贝扎特的报道，他并指出，这证明了中俄两国之间的关系密切。         </strong></p><div><p>欧盟特使大卫·奥沙利文 (David O’Sullivan )是一位极其忙碌的高级公务员。 他担任对俄罗斯实施制裁监督的特使：他受布鲁塞尔控制的爱尔兰白人被指派负责核实中国是否有规避这些对俄罗斯的制裁。 这是中国自 2022 年 2 月针对俄罗斯动武乌克兰的战争开始时第一个一揽子计划生效以来，它一直在这样做，并取得了一些成功。 </p><p style="text-align:left">布鲁塞尔尽管对俄罗斯的石油和煤炭、战略零部件、公司企业、老板和政客实施了制裁，但布鲁塞尔并没有中断与俄罗斯的所有贸易。 </p><p style="text-align:left">几个月来增加了新的制裁。 继1月1日禁止钻石贸易后，3月初，第13个一揽子计划覆盖了200家实体和个人，未影响特定行业。 欧盟对于弗拉基米尔·普京的对手阿列克谢·纳瓦尔尼于 2 月 16 日在北极的一个战俘营中死亡事件一直在抗议中。 X3a </p><p style="text-align:left">但天然气、石油和铀仍然继续在交易，甚至是以间接的方式进行交换。 更不要说某些金属，这对莫斯科来说是一项利润丰厚的营业活动，尽管制裁导致贸易额从 2022 年的 230 亿欧元减少到 2023 年的 140 亿欧元。 </p><p style="text-align:left">铜伪装成废金属 美国和英国于 4 月 12 日星期五宣布禁止进口俄罗斯生产的铝、铜和镍， </p><p style="text-align:left">以及场外衍生品交易的限制。 对他们的业务至关重要，伦敦和芝加哥金属交易所将不再能接受它们。 </p><p style="text-align:left"><strong>欧盟贸易额下降：</strong> </p><p style="text-align:left">英国财政大臣杰里米·亨特保证说：“这将阻止克里姆林宫向其战争机器注入更多资金。” 根据俄罗斯海关数据，制裁正在产生影响：2023年，俄罗斯对欧洲大陆的货物出口下降了68%，全球下降了28%，这证明欧盟与那些拒绝制裁俄罗斯的国家之贸易并没有回偿这一损失。 </p><p style="text-align:left">然而，事实上，每天都会有一些规避这项制裁的办法。在欧盟财政部宣布金属禁运的同时，美国领导人透露，中国通过出售机床、电子元件以及无人机或导弹技术来支持莫斯科的武器生产。 </p><p style="text-align:left">据路透社报道，中俄两国以废金属的形式进行铜贸易。 土耳其、阿拉伯湾和中亚从西方进口的大量商品被再出口到俄罗斯，以支持其对乌克兰战争付出的努力。 欧盟需要十个奥沙利文先生才能监控所有这些暗中交易…… </p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BB%25A5%25E8%25A7%2584%25E9%2581%25BF%25E6%2589%258B%25E6%25B3%2595%25E6%2594%25AF%25E6%258C%2581%25E8%258E%25AB%25E6%2596%25AF%25E7%25A7%2591%25E7%259A%2584%25E6%25AD%25A6%25E5%2599%25A8%25E7%2594%259F%25E4%25BA%25A7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWbJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWbJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 18:33</div><img src="https://s.rfi.fr/media/display/cd734416-5ddf-11ee-bfcd-005056a90321/w:1280/p:16x9/2023-09-14T021008Z_16306262_RC25QU9OAPK9_RTRMADP_3_AUSTRALIA-DEFENCE.JPG"><p><strong>随着美中两国在印太地区的战略竞争日趋白热化，澳大利亚将增加国防预算并重新考虑其国防计划。澳洲政府周三宣布，计划在未来十年内增加额外500亿澳元（约合320亿美元）的国防投资，预计到2033至2034年，澳大利亚的国防经费占GDP的比例将从2024至2025年的2.1%上升到2.4%。澳洲国防开支预计将从2024至2025年的约550亿澳元增长到2033至2034 年的约1000亿澳元。                    </strong></p><div><p>澳大利亚这个美国的重要盟国还概述了全面整顿其军事力量的计划。官员们说，这样做的目的是威慑任何潜在敌手通过澳洲北部通道投射力量的企图。他们希望澳大利亚国防军成为一支重点更加突出的力量，能够应对该国最重大的战略风险。这意味着其计划发展一支规模更大、杀伤力更强的海军，一支能更好地在沿岸环境中作战的陆军，一支更强的空军，以及更强的网络和太空能力。</p><p>根据周三发布的澳大利亚新《国防战略》，当务之急包括计划通过澳英美三边安全伙伴关系（又称奥库斯协议、AUKUS）购买核动力潜艇，加强远程打击和导弹制造，以及加强澳洲北部的重要基地建设。新《国防战略》指出，“中国正在以近一个世纪以来世界上从未见过的速度和规模提高其在所有战争领域的能力”，“这种情况是在战略目的不透明的情况下发生的”。</p><p>中方领导人誓言在必要时武统台湾，美国官员称中国军方已接到指示，准备在2027年前具有入侵台湾的能力。与此同时，华盛顿也在努力加强其在该地区的联盟网络，以威慑北京。近年来，澳大利亚深化了与美国的防务合作，两国军队经常共同训练并购买相同的装备。最近，澳大利亚、美国、日本和菲律宾在有争议的南中国海举行了联合海军演习。</p><p>与此同时，澳大利亚左翼政府在总理阿尔巴尼斯（Anthony Albanese）的领导下，寻求与最大贸易伙伴中国解冻外交关系。自阿尔巴尼斯在2022年大选中获胜以来，澳中两国已恢复了高层对话，而中方最近也采取行动，取消了对包括葡萄酒在内的澳大利亚商品的贸易限制。澳洲新《国防战略》说：“虽然澳中两国的价值观和政治制度不同，但稳定和建设性的关系符合两国的利益”。</p><p>澳大利亚副总理兼国防部长马尔斯（Richard Marles）周三在出席新闻发布会时表示：“去年4月24日，阿尔巴尼斯政府发布了《国防声明》和《国防战略评估》报告。《国防战略评估》报告是在本届政府执政的头100天委托编写的，它对澳大利亚的战略形势进行了严峻的评估，并提出了必要的国防改革的大胆议程。《国防声明》指出：‘在没有战略保证的情况下进行的一场大规模常规和非常规军事集结，导致本地区几十年来面临最具挑战性的局势’。”</p><p>马尔斯补充说：”《国防战略评估》报告指出：因此，80年来，我们首次必须回到基本点，采取第一原则的方法来处理我们如何管理与寻求避免我们作为一个国家现在面临的最高级别的战略风险：在本地区发生直接威胁我们国家利益的重大冲突的前景”。</p><p>马尔斯说：“二战结束以来最复杂的战略形势要求我们对战略态势进行35年来最大规模的重新评估：对澳大利亚国防军的基本任务以及我们需要一支怎样的澳大利亚国防军来完成这一任务进行基础性思考。在过去的几十年里，澳大利亚国防军一直是一支‘平衡’的部队，能够在各种环境下履行广泛的职能，无论是在阿富汗参与由其他国家领导的多国努力，还是在东帝汶或所罗门群岛领导地区任务”。</p><p>马尔斯谈到：“《国防战略评估》报告的基本论点要求从这种‘平衡’的力量转变为‘集中’的力量。现在我们的任务只有一个：转变我们未来的能力，使澳大利亚能够在一个更加不确定的地区和世界中抵御胁迫并维持我们的生活方式。澳大利亚国防军需要完全专注于此”。</p><p>马尔斯表示：“我们的国家安全和国家繁荣建立在一个稳定和平的地区基础之上，在这个地区，基于规则的全球秩序具有至高无上的地位并得到尊重。事实上，海上交通规则就是我们的一切。当基于规则的秩序受到压力时，澳大利亚就会受到压力。至关重要的是，这种说法描绘了我们国家安全的地理格局。它并不在我们大陆的海岸线上，而在更远的地方。在任何情况下，入侵澳大利亚都是不可能发生的，这正是因为敌手无需踏上澳大利亚的土地，就能对我国造成如此巨大的破坏”。</p><p>马尔斯续指：“我们的国家安全实际上就在我们地区的中心。因为没有我们所在地区的集体安全，澳大利亚的国防就没有什么意义。因此，为了落实《国防战略评估》报告所要求的重点，它反过来建议发展一支具有更强投射能力的澳大利亚国防军。为了促进地区安全，我们必须能够进行投射”。</p><p>马尔斯说：“为了抵御因海上交通线被破坏而带来的胁迫，我们必须能够进行投射。为了捍卫澳大利亚在无地理限制的网络领域的利益，我们必须能够进行投射。我们的任务是通过全方位的适度反应进行有影响力的投射。我们必须有能力做到这一点，使任何敌手都没有能力针对澳大利亚的利益采取行动，这就是‘拒止战略’。”</p><p>马尔斯提及：“毫不奇怪，（新的）《国防战略》重申了我们战略环境的复杂性。冷战结束后指导国防规划的乐观假设早已不复存在。我们所处环境的特点是美国和中国之间根深蒂固且日益加剧的战略竞争所带来的不确定性和紧张局势；大规模战争已重返欧洲大陆；冲突再次笼罩中东”。</p><p>马尔斯说：“在这一竞争的同时，我们地区的常规和非常规军事集结也是史无前例的，既没有战略保证，也不透明。这种军事集结的影响比以往更接近澳大利亚，包括在澳大利亚周边地区争夺安全伙伴关系。这一日益加剧的竞争正在创造一种环境，在这种环境中，误判的风险更加不祥，后果也更加严重”。</p><p>马尔斯续称：“《国防战略》指出中国为实现其战略目标采取了胁迫手段，包括根据国际法强行处理领土争端，以及不安全地拦截在国际水域和空域活动的船只和飞机。澳大利亚不再奢望有十年的冲突战略预警时间。《国防战略》指出，在过去十二个月中，我们的战略环境已经恶化”。</p><p>马尔斯说：“在这一战略背景下，《国防战略》强调，必须进行有影响力的投射，以实现拒止战略，进而阻止潜在敌手对澳大利亚进行武力投射。这包括有能力在离我们海岸更远的地方将敌手的军事资产置于危险之中”。</p><p>马尔斯强调：“同样重要的是，该战略旨在确保澳大利亚能够与我们的伙伴合作，帮助威慑本地区发生对我们所有人都将造成灾难性后果的更广泛冲突。通过这种方式，澳大利亚政府寻求在印度-太平洋建立可持续的战略平衡。在这种平衡中，没有任何一个国家在军事上占优势，也没有任何一个国家认为冲突的利益可能大于风险”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%BC%97%E6%9E%97/" title="弗林">弗林</a></div></div></div></div>
