--- a/articles/rfi/999959.md
+++ b/articles/rfi/999959.md
@@ -1,5 +1,5 @@
-<!--1713532503000-->
-[美国宇航局局长警告：中国利用民用项目掩盖太空军事存在](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A-%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8)
+<!--1713541502000-->
+[七国集团：乌克兰需更多防空支援](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2-%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4)
 ------
 
-<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/c28e1990-fd67-11ee-b1f8-005056a97e36/w:1280/p:16x9/AP23117711747550.jpg"><p><strong>美国宇航局局长比尔·尼尔森 4 月 17 日在华盛顿表达了对中国秘密航天进展的担忧。他警告说，中国通过利用民用项目来掩盖军事目标以增强其太空能力，并警告华盛顿必须保持警惕。         </strong></p><div><p>中国在航空航天领域的进步，尤其是其不透明的做法，令美国宇航局感到担忧。比尔·尼尔森告诉国会山议员，中国对其太空进展“非常非常保密”，并警告“我们正在一场竞赛”。尼尔森怀疑中国的民用太空计划实际上隐藏着军事计划，这凸显了北京缺乏透明度。</p><p>美国宇航局局长比尔·尼尔森在国会山对议员们说：“中国取得了非凡的进步，特别是在过去十年中，但它们非常非常保密。”</p><p>尼尔森说：“我们认为，他们很多所谓的民用太空计划都是军事计划。我认为，实际上，我们正在进行一场竞赛。”</p><p>他说他希望北京能够“清醒过来，明白民用空间是用于和平用途”，但他补充说：“我们还没有看到中国表现出这一点。”</p><p>尼尔森是在众议院拨款委员会就 NASA 2025 年预算作证时发表上述言论的。</p><p>他表示，美国应该在中国之前再次登陆月球，因为两国都在执行月球任务。但他表示担心，如果北京先到达，可能会说：“好吧，这是我们的领土，你别进来。”</p><p>尼尔森此前表示，美国正在与中国“进行太空竞赛”，并警告说，中国最终可能声称“拥有”月球资源丰富的地区。</p><p>2022年，中国航天计划建成了地球轨道空间站，并实施了多次绕月和样本回收任务。</p><p>此后，美国一直计划通过阿耳忒弥斯三号任务在 2026 年将宇航员送回月球。中国表示希望在2030年之前将人类送上月球。</p><p>尼尔森表示，他相信美国不会失去其在太空探索方面的“全球优势”。</p><p>他说美国必须现实一点，因为“中国确实投入了大量资金，他们的预算还有很大的增长空间。“ 但 “我认为我们最好不要放松警惕。”</p><p>据美国国防情报局称，中国目前有 499 颗卫星在轨运行。这个数字是 2019 年的两倍多。中国还正在开发间谍气球和高超音速导弹。</p><p>《阿耳忒弥斯协定》是由美国宇航局和美国国务院起草一项要求太空活动必须出于和平目的的协议，已由包括英国在内的 40 多个国家签署。中国尚未签署这些协议。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpb.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AE%2587%25E8%2588%25AA%25E5%25B1%2580%25E5%25B1%2580%25E9%2595%25BF%25E8%25AD%25A6%25E5%2591%258A-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2588%25A9%25E7%2594%25A8%25E6%25B0%2591%25E7%2594%25A8%25E9%25A1%25B9%25E7%259B%25AE%25E6%258E%25A9%25E7%259B%2596%25E5%25A4%25AA%25E7%25A9%25BA%25E5%2586%259B%25E4%25BA%258B%25E5%25AD%2598%25E5%259C%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpb.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:59</div><img src="https://s.rfi.fr/media/display/6384d6b2-f1e3-11ee-bf58-005056bfb2b6/w:1280/p:16x9/2024-04-03T152832Z_1197154583_RC23Z6A28JCI_RTRMADP_3_NATO-FOREIGN.JPG"><p><strong></strong></p><div><p>德国总理朔尔茨出访中国前与遭受俄罗斯入侵的乌克兰总统泽连斯基通电话，告知德国计划追加提供6个美制爱国者地空导弹系统到给乌克兰。</p><p>乌克兰外长库列巴18日在意大利卡普里岛呼吁七国集团应该像对以色列那样向乌克兰提供更多的防空系统。库列巴认为西方国家对以色列和乌克兰采取了两种不同的策略。目前美国等七国集团国家的外长正在卡普里岛举行会议。</p><p>七国集团（G7）部长们4月18日在意大利卡普里岛进行第二天会谈，首先讨论中东危机，下午将把注意力转向乌克兰，北约首脑和乌克兰外交部长也参与其中。</p><p>欧盟外交政策负责人博雷尔敦促欧盟国家提供防空系统，帮助乌克兰保护城市免受俄罗斯的攻击，否则乌克兰的电力系统将被摧毁。“没有一个国家可以在住家、工厂和网络等都失去电力的情况下进行战斗。”</p><p>乌克兰外交部长库列巴说，西方对以色列的态度与乌克兰不同，当伊朗袭击以色列时，美国和盟友协助击落了这些导弹和无人机。“以色列的合作伙伴战略似乎是防止损害和死亡……在过去的几个月里，乌克兰的合作伙伴战略则是帮助乌克兰从损害中重振。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtG.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E4%25B8%2583%25E5%259B%25BD%25E9%259B%2586%25E5%259B%25A2-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E9%259C%2580%25E6%259B%25B4%25E5%25A4%259A%25E9%2598%25B2%25E7%25A9%25BA%25E6%2594%25AF%25E6%258F%25B4&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtG.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
