--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
 <!--1713444302000-->
-[法国总理阿塔尔上任一百天了 政绩如何？ - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240418-%E6%B3%95%E5%9B%BD%E6%80%BB%E7%90%86%E9%98%BF%E5%A1%94%E5%B0%94%E4%B8%8A%E4%BB%BB%E4%B8%80%E7%99%BE%E5%A4%A9%E4%BA%86-%E6%94%BF%E7%BB%A9%E5%A6%82%E4%BD%95)
+[政客报透露中国秘密与美国国会讨论TikTok 有疑适得其反](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BA%E6%8A%96%E9%9F%B3-%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D)
 ------
 
-<div>18/04/2024 - 14:03</div><img src="https://s.rfi.fr/media/display/b0a32400-f006-11ee-8629-005056a90284/w:1280/p:16x9/2024-03-27T202323Z_336472124_RC2OP6A8S2QK_RTRMADP_3_FRANCE-UNEMPLOYMENT-ATTAL.JPG"><p><strong>周四（4月18号）是法国总理加布里埃尔-阿塔尔被任命100天，各报均对这个主题有大幅报道和分析。根据咨询公司Odoxa-Backbone Consulting 为《费加罗报》所做的最新民意调查，法国人虽然对总理的行为持批评态度，但对他的个人魅力表示认可。                    </strong></p><div><p>根据这份民调， 48%的法国人认为他是一位好总理，但他的形象在多个方面都在下滑：68%的法国人认为他充满活力，下降两个百分点，但认为他有魅力或贴近民众关切的人分别为45%和44%, 均有所下降。</p><p>在他入职后的总政策演讲中，新总理曾定下了基调：包括"重塑法国"、"取消对员工的补贴"、创造住房 "供应冲击"、"去行政官僚化"......在抵达马蒂尼翁一百天后，现在到了阿塔尔做一个小总结的时候了。各报自然对他的政策亮点进行了点评和期望。</p><p><strong>青年暴力和教育问题</strong></p><p>右翼《费加罗报》指出，加布里埃尔-阿塔尔（Gabriel Attal）希望在本周四纪念他上任100天之际，利用他在马蒂尼翁的权威，他要前往埃松省（Essonne）的维利-沙蒂永（Viri-Châtillon），之所以选择这个城市，是因为十天前在该市的一个中学校门口，发生了一名15岁的少年被人殴打致死而震惊法国舆论的惨案。阿塔尔将发表题为"“关于共和国核心权力”的演讲，试图消除人们的疑虑。但尽管这位前教育部长似乎曾带来了典范式的转变，但在世俗主义受到质疑的背景下，青少年暴力事件数量仍在令人担忧地增加。</p><p>左翼《解放报》指出，自1月9日上任以来，总理一直在应对动荡的预算形势和国民议会中脆弱的相对多数。为了坚持自己的立场，政府首脑寄希望于恢复权威，尤其是在青年和教育问题上。</p><p>《费加罗报》指出，糟糕的政府政绩和公共财政的急剧恶化，正在为他作为政府首脑的第一步成果蒙上阴影，尽管在这些问题上，他此前的声望一直很高。阿塔尔意识到自己在国民议会中并不占绝对多数，因此自上任以来一直没有提交任何重要立法。这让他的一些部下感到不耐烦，一些人呼吁 "重新启动立法机器"。为了回应对总理言行不一的指责，各部长办公室于周二晚间接到指示，要求他们准备视觉资料，在社交网络上列出总理的成就。</p><p><strong>空洞的一百天</strong></p><p>《解放报》的一篇评论更指出，加布里埃尔-阿塔尔在总理府的一百天，是空洞的一百天：既不左，也不由，什么都不是。总统马克龙的第四任总理上任三个月后，其沟通方式虽然花样多但均短视。作者认为这是马克龙主义没有指南针的表现。如果相信阿塔尔的演讲和他的执政艺术，那么他的逻辑应该是努力与右派共同执政，以获得绝对多数。但是，如果没有事先达成的政治协议，没有足够自信的道德或个人权威，阿塔尔将一事无成。他甚至无法在欧洲大选中为复兴党推出名单开展有效的竞选活动。他的出现只不过是作为一种回应的尝试，旨在对抗在欧洲议会选举上占据投票意向领先的极右翼国民联盟的带头人巴尔德拉（Jordan Bardella<em> ) </em>的效应。</p><p>这篇充满批评语气的文章最后写道：没有多数，没有权威，没有明确的政治定位，没有改革计划来安排未来几个月的工作，阿塔尔除了努力避免错过奥运会的组织工作，以及带着矛盾的双重目标：既不吓唬评级机构，以免我们的债务利率飙升，又不冒社会危机的风险，很难看出他还有什么作用。在欧洲大选可能失败后，这样一个政治团队如何能够团结一致？</p><p><strong>欧洲议会选举的挑战</strong></p><p>对于加布里埃尔-阿塔尔的政治未来，右派的《费加罗报》似乎也不看好，指出，他最坏的打算是什么？在马蒂尼翁的日子不会长久，而议会提出谴责动议的可能性正日益激化右翼队伍，并可能拉拢左翼和新军。总理深知这一点：从 7 月 9 日起，即欧洲大选一个月后，也就是他上任六个月后，国家元首必须按照传统授予他国家功勋大十字勋章。那么，至少他还有一百天的任期。</p><p>经济类报纸《回声报》同一主题指出，在总理府马提翁执政一百天后，加布里埃尔-阿塔尔着手解决 "权力削弱 "问题。周四的讲话要回应公众对安全的强烈要求。马克龙总统在奥林匹克运动会开幕前一百天，就法国人关心的另一个问题--奥林匹克运动会的安全问题作出了保证。</p><p>该报指出，面对极右翼的国民联盟的攻势，执政党多数派仍未找到扭转趋势的良方。妖魔化不再奏效，谴责国民联盟议员在欧洲议会的记录或审查他们的提案也不再奏效。根据《回声报》（Les Echos）和 古典广播电台（Radio classique）委托进行的 EuroTrack 民意调查，对安全问题讨论的支持率正在上升，在本次议会大选中位列第三，仅次于购买力和物价上涨议题。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E7%B1%B3/" title="艾米">艾米</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 12:14</div><img src="https://s.rfi.fr/media/display/8bfd6d7e-e181-11ee-9af3-005056a97e36/w:1280/p:16x9/2024-03-13T141117Z_179367349_RC2VA1AM24NU_RTRMADP_3_USA-TIKTOK-CONGRESS.JPG"><p><strong>两名美国国会山工作人员表示，中国大使馆已与国会工作人员举行会议，游说反对强制出售 TikTok 的立法。中国外交派驻似乎没有否认此一消息。TikTok曾派出高管新加坡人周受资在美国国会接受质询，明确称TikTok与中国官方没有任何关系。但美国议员称，中国使馆的动作恰恰表明TikTok对中国官方很重要。        </strong></p><div><p>据POLITICO报道称，中国外交官正在悄悄与美国国会工作人员会面讨论 TikTok。</p><p>在众议院通过一项强制出售该公司的法案后，中国大使馆的外交官与美国国会办公室会面，推动捍卫该应用程序。</p><p>总部位于北京的字节跳动公司旗下的 TikTok 一再否认与中国政府有关系，并试图与在中国母公司保持距离。但现在，由于强制出售该公司的立法在参议院面临着不确定的前景，中国大使馆似乎正在利用中国政治影响力来保护TikTok公司在美国的未来。</p><p>美国国会工作人员表示，与美国国会工作人员的会面是由中国大使馆在外展活动中发起的，最初并未提及 TikTok，其中一名人员在众议院工作，另一名在参议院工作，他们被要求匿名讨论他们所讨论的对话。未获授权公开透露。这些会议是在众议院三月份以压倒性多数投票支持《保护美国人免受外国对手控制应用程序侵害法案》之后举行的，该法案将迫使字节跳动出售 TikTok。</p><p>此外，据第三位工作人员（一位被联系的民主党参议院助手）透露，在另一次安排会面的电话中，一名中国大使馆官员表示，中国大使有兴趣讨论众议院的 TikTok 法案等问题。</p><p>两名工作人员表示，大使馆在两次会议上都淡化了对 TikTok 的美国国家安全担忧，并寻求将该应用程序与美国利益保持一致：在一次会议上，中国大使馆表示对 TikTok 的禁令将损害持有字节跳动部分股权的美国投资者。另一方面，中国大使馆强调并非所有字节跳动董事会成员都是中国公民。</p><p>美国国会工作人员表示，尽管 TikTok 公开努力与其创始人的出身保持距离，但中国大使馆还试图声称该公司是中国公司。与字节跳动不同，TikTok 的总部位于新加坡和美国。据众议院工作人员称，在一次会议上，中国大使馆辩称该立法相当于强制传输一家中国公司的数据。另一方面，据美国参议院工作人员称，中国大使馆认为这一努力对中国公司不公平，因为美国不会以同样的方式对待不同国籍的公司。</p><p>TikTok 在一份声明中表示，中国大使馆参与会议“对我们来说是新闻，要求我们对我们一无所知的匿名消息来源发表评论是荒谬的”。TikTok 发言人亚历克斯·豪雷克 (Alex Haurek) 表示：“自该法案提出以来，我们一直公开表达反对该禁令法案的原因。” “这份所谓的报道没有通过事实证实，Politico 发表它是不负责任的。”</p><p>据Politico称，不过，中国大使馆并未否认举行过这些会议。中国使馆发言人刘鹏宇在一份声明中表示，“中国驻美国使馆试图向美国各界人士讲清TikTok问题的真相。”刘鹏宇说，“这不是为某一家公司游说，”该发言人补充道，“而是关于是否所有中国公司都能得到公平对待。”</p><p>该声明接着重申了美国国会工作人员所说的在会议上提出的一些论点，包括反驳美国国家安全担忧，以及强调对字节跳动的国际投资。</p><p>中国使馆声明还强调，尽管TikTok的运营合法，但美国“已想方设法动用国家力量对其进行打压”。</p><p>据Politico，TikTok 已经武装了数十名游说者，并花费了数百万美元来反驳华盛顿有关该公司的言论，该应用程序的反对者一再辩称，它是中国影响美国情绪的强大工具。该公司还花费了数百万美元进行广告，以争取公众对这项立法的支持，并通过推送警报来利用其消费者基础，使该应用程序的用户可以轻松地致电国会。保守派的增长俱乐部（Club for Growth）是一个由字节跳动主要投资者杰夫·亚斯（Jeff Yass）部分资助的政治拥护团体，也敦促立法者推动这项法案。</p><p>由于美国参议院仍处于僵局，影响国会办公室的广泛努力最终可能会成功。参议院商务委员会主席参议员玛丽亚·坎特韦尔（华盛顿州民主党人）一直在与其他办公室就该法案的措辞进行谈判，以巩固法案法律地位。众议院法案的支持者、中国共产党特别委员会主席迈克·加拉格尔（威斯康星州共和党人）将于本月离开众议院。预计强制出售 TikTok将被纳入众议院议长迈克·约翰逊周三发布的一系列有关外国援助和外国对手的法案中。</p><p>外交官的游说活动在很大程度上不被公众所知，因为它们通常不受外国影响美国政治行为透明度规则的涵盖。曾在司法部负责外国影响力法执行工作的戴维·劳夫曼 (David Laufman) 表示，《外国代理人登记法》包括明确豁免某些大使馆官员的条款。</p><p>一位参加与中国官员会面的美国国会工作人员指出，中国大使馆此前也曾试图对抗美国针对另一家中国科技公司华为的行动。</p><p>在公开场合，中国也批评国会针对 TikTok 采取的行动。美国众议院法案通过后，中国外交部表示，该法案“使美国站在了公平竞争原则和国际贸易规则的错误一边”。</p><p>美国外交政策委员会印度太平洋研究高级研究员迈克尔·索博利克认为，中国大使馆游说活动的曝光反而凸显了将 TikTok 与其中国母公司分开的必要性。</p><p>索博利克说，“中国外交官这一次帮了美国一个忙。” 索博利克是有关美中关系的书《反击中国的大博弈》的作者。索博利克说，“通过游说美国国会工作人员保护 TikTok 与字节跳动的关系，（中华人民共和国）官员揭示了 TikTok 对中国共产党的价值。失去对该应用程序的控制，将削弱北京针对美国人行为最有力的武器。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWmF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E6%2594%25BF%25E5%25AE%25A2%25E6%258A%25A5%25E9%2580%258F%25E9%259C%25B2%25E4%25B8%25AD%25E5%259B%25BD%25E7%25A7%2598%25E5%25AF%2586%25E4%25B8%258E%25E7%25BE%258E%25E5%259B%25BD%25E5%259B%25BD%25E4%25BC%259A%25E8%25AE%25A8%25E8%25AE%25BA%25E6%258A%2596%25E9%259F%25B3-%25E6%259C%2589%25E7%2596%2591%25E9%2580%2582%25E5%25BE%2597%25E5%2585%25B6%25E5%258F%258D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D%20-%20https%3A%2F%2Frfi.my%2FAWmF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D%20-%20https%3A%2F%2Frfi.my%2FAWmF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWmF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
