--- a/articles/rfi/999977.md
+++ b/articles/rfi/999977.md
@@ -1,5 +1,5 @@
-<!--1713444301000-->
-[邓小平孙子邓卓棣任新职](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C)
+<!--1713444302000-->
+[拜登昨晚大批中国钢铁排外与作弊 发言人林剑今早冷问是否说美国自己](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A-%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1)
 ------
 
-<div>18/04/2024 - 12:26</div><img src="https://s.rfi.fr/media/display/67bf55d6-15e7-11ea-9149-005056a99247/w:1280/p:16x9/2016-10-25t100942z_1566907793_s1aeuizgliab_rtrmadp_3_china-politics.jpg"><p><strong>港媒今天透露，已故中共领导人邓小平的孙子邓卓棣目前担任中信财务有限公司监事。此前2013年5月，邓卓棣曾担任广西壮族自治区百色市平果县副县长兼新安镇党委书记、县委副书记，2016年卸任退出政坛。        </strong></p><div><p>据中央社今天引述星岛日报消息，邓卓棣已淡出政界8年，动向一直未明，但根据中国企业查询公司“爱企查”的资料，邓卓棣目前担任中信财务有限公司监事。</p><p>中信财务是央企中信集团子公司，有传他任职中信法务部，但未能证实。</p><p>据消息称，邓卓棣是邓小平次子邓质方之子，1985年出生于美国，7岁时曾随邓小平南巡，后来毕业于北京大学法律系，并前往美国杜克大学攻读法学硕士学位，在海外工作一段时间后回国。2013年5月，邓卓棣担任广西壮族自治区百色市平果县副县长兼新安镇党委书记、县委副书记，2016年卸任，2017年担任北京市桥牌协会理事。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWmW.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E9%2582%2593%25E5%25B0%258F%25E5%25B9%25B3%25E5%25AD%2599%25E5%25AD%2590%25E9%2582%2593%25E5%258D%2593%25E6%25A3%25A3%25E4%25BB%25BB%25E6%2596%25B0%25E8%2581%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C%20-%20https%3A%2F%2Frfi.my%2FAWmW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C%20-%20https%3A%2F%2Frfi.my%2FAWmW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWmW.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 10:19</div><img src="https://s.rfi.fr/media/display/de4dac9c-fa86-11ee-8398-005056bfb2b6/w:1280/p:16x9/AP24103786777136.jpg"><p><strong>周四，中国今天指责美国总统拜登虚伪。美国总统拜登昨天在美国匹兹堡发表讲话指责中国当局在全球“钢铁”贸易中“排外”和“作弊”。 中国外交部发言人林剑今天回应称，“我想问拜登，你说的是中国还是美国？”        </strong></p><div><p>美国总统拜登昨天宣布，他希望将来自中国的钢铁和铝的关税提高两倍。法新社称，这是拜登试图吸引美国工人阶级的政治选票。拜登开始一个星期的在宾夕法尼亚州竞选宣传活动。</p><p>这位民主党人指责北京在全球钢铁贸易中“作弊”，损害了美国制造商及其工人的利益，美国制造商及其雇员是11月总统选举的关键选民，除非有任何意外，他将在这次选举中面对他的竞争对手特朗普。</p><p>拜登指控中国说，“他们仇外。” 这位民主党人感叹中国钢铁企业“不必担心盈利问题，因为中国政府对它们提供大量补贴”。拜登称，“他们不是在竞争，而是在作弊，我们已经在美国看到了这种损害。”</p><p>拜登自称是美国工人最好盟友。拜登说，“我不是在寻求与中国对抗，我想要竞争，而是公平竞争。”</p><p>拜登还进一步澄清，他保证不会与北京发生“贸易战”。</p><p>美国工会和雇主一致对这些保护主义措施表示欢迎。美国钢铁工人联合会（USW）感谢他为捍卫美国的钢铁而采取的“积极”行动。该工会上个月宣布支持民主党参加11月大选，指责拜登的对手特朗普“剥夺工人权利”，尽管特朗普也自称是美国制造业复兴的捍卫者。</p><p>法新社说，自 1990 年以来，宾夕法尼亚州已经失去了超过 40% 的制造业工作岗位，宾夕法尼亚州是美国工业的历史中心，也是可能在 11 月左右选举结果的六个关键州之一。</p><p>总部位于该州的美国钢铁巨头美国钢铁公司表示“赞赏”乔·拜登的声明，该行业的雇主组织也持这一立场。 这位民主党人周三还重申反对日本新日铁公司收购美国公司。</p><p>周二的前一天，拜登从家乡斯克兰顿呼吁为最富有的人增加税收，这与特朗普竞选立场形成鲜明对比。 周三，特朗普陷入非常忙碌，因为他在纽约忙碌的应对审判。</p><p>民主党目前的竞选活动，主要关注宾夕法尼亚州及其白人工人选民。</p><p>特朗普谴责拜登对他的不实指控。特朗普长期以来一直为增加对中国的关税辩护，他的竞选团队周三谴责了民主党及时改变主意。共和党指责“拜登的整个职业生涯都在背叛美国工人，”共和党发言人在一份声明中写道，拜登周三宣布的措施“太软弱，而且来得太晚”。</p><p>拜登周三还呼吁其贸易代表（USTR）“考虑将目前的关税提高两倍”，对进口到美国的部分钢铁和中国铝征收平均7.5%的关税。拜登政府还宣布对中国在“造船、航运和物流领域”的措施进行调查。</p><p>据法新社称，北京迅速谴责“不实指控”。中国商务部称，美国的调查“错误地将正常的贸易和投资活动解释为损害国家安全和美国企业的利益”。 美国“指责中国应对其自身的工业问题负责”。</p><p>尽管两国重新启动了对话，但美国的声明是在与中国激烈竞争的背景下做出的。当被问及这些声明是否会危及他试图与中国国家主席习近平维持的关系时，拜登回答说“不会”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWki.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E6%258B%259C%25E7%2599%25BB%25E6%2598%25A8%25E6%2599%259A%25E5%25A4%25A7%25E6%2589%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E6%258E%2592%25E5%25A4%2596%25E4%25B8%258E%25E4%25BD%259C%25E5%25BC%258A-%25E5%258F%2591%25E8%25A8%2580%25E4%25BA%25BA%25E6%259E%2597%25E5%2589%2591%25E4%25BB%258A%25E6%2597%25A9%25E5%2586%25B7%25E9%2597%25AE%25E6%2598%25AF%25E5%2590%25A6%25E8%25AF%25B4%25E7%25BE%258E%25E5%259B%25BD%25E8%2587%25AA%25E5%25B7%25B1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1%20-%20https%3A%2F%2Frfi.my%2FAWki.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1%20-%20https%3A%2F%2Frfi.my%2FAWki.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWki.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
