--- a/articles/rfi/999994.md
+++ b/articles/rfi/999994.md
@@ -1,5 +1,5 @@
-<!--1713392101000-->
-[以军宣布援助物资通过阿什杜德港进入加沙](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240417-%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99)
+<!--1713393902000-->
+[阿联酋遭遇最大降雨   机场大乱   学校停课一周](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8-%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1-%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8)
 ------
 
-<div>17/04/2024 - 22:35</div><img src="https://s.rfi.fr/media/display/ad8b7fa4-fbac-11ee-9429-005056a97e36/w:1280/p:16x9/2024-04-12T072218Z_257605188_RC2L37AGYJG0_RTRMADP_3_ISRAEL-PALESTINIANS-GAZA-EID-PRAYERS.JPG"><p><strong></strong></p><div><p>军方在一份声明中表示：“世界粮食计划署的八卡车面粉4月17日从阿什杜德港进入加沙地带。”军方补充说，这是“阿什杜德港获批开放以来的第一次”。</p><p>4月5日，以色列政府迫于盟友和国际组织的压力，宣布了多项措施，旨在加快向被围困、面临人道主义悲剧的加沙地带运送援助物资。这些措施包括向加沙提供的援助物资抵达阿什杜德港，因为该港靠近巴勒斯坦领土。 以色列大型港口位于加沙以北约三十公里处。</p><p>来自人道主义机构的国际援助主要通过塞得港或较小的阿里什港抵达埃及。</p><p>军方周三表示，粮食计划署的卡车“在阿什杜德港接受了彻底的安全检查，然后通过凯雷姆沙洛姆过境点进入加沙地带”。</p><p>据人道主义组织称，凯雷姆沙洛姆（Kerem Shalom）是从以色列进入加沙的少数几个陆路口岸之一，位于加沙南部边境，导致检查援助物资的旅程非常耗时。</p><p>作为4月5日宣布措施的一部分，以色列还表示，已在人道主义危机最严重的加沙地带北部开设了一个新的陆路过境点。目前，大多数卡车通过埃及和加沙边境的拉法过境点进入，该过境点位于巴勒斯坦领土的南端，被以色列和巴勒斯坦哈马斯之间的战争蹂躏了六个多月。</p><p>军方周二宣布，约 553 辆人道主义援助卡车在 48 小时内进入加沙地带，联合国认为这一数字不够。联合国巴勒斯坦难民机构（近东救济工程处）当天在一份新闻稿中强调，“进入加沙的人道主义援助数量没有发生重大变化，进入加沙北部的通道也没有改善”。</p><p>据近东救济工程处称，自 4 月初以来，平均每天有 181 辆援助卡车通过拉法和凯雷姆沙洛姆出入点进入加沙，估计这一数字“远低于两个边境哨所的业务能力和每天 500 辆卡车”。</p><p>周三，以色列总理内塔尼亚胡“驳斥了国际组织对加沙闹饥荒的指控，并确认以色列在人道主义问题上正在尽一切努力。”</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgo.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240417-%25E4%25BB%25A5%25E5%2586%259B%25E5%25AE%25A3%25E5%25B8%2583%25E6%258F%25B4%25E5%258A%25A9%25E7%2589%25A9%25E8%25B5%2584%25E9%2580%259A%25E8%25BF%2587%25E9%2598%25BF%25E4%25BB%2580%25E6%259D%259C%25E5%25BE%25B7%25E6%25B8%25AF%25E8%25BF%259B%25E5%2585%25A5%25E5%258A%25A0%25E6%25B2%2599&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99%20-%20https%3A%2F%2Frfi.my%2FAWgo.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99%20-%20https%3A%2F%2Frfi.my%2FAWgo.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgo.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 22:42</div><img src="https://s.rfi.fr/media/display/fb3ca3e6-fcfa-11ee-93d6-005056a97e36/w:1280/p:16x9/2000006893198.png"><p><strong></strong></p><div><p>这场降雨淹没了街道，连根拔起棕榈树，摧毁了建筑外墙。自1949年有记录以来，这个中东国家从未见过这样的降雨。在热门旅游目的地迪拜，航班被取消，交通中断，学校关闭至少一个星期。</p><p>根据机场的气象观测，周二仅12小时内就有100毫米（近4英寸）的降雨量。根据联合国的数据，这大约是迪拜全年的降雨量。</p><p>雨下得又大又快，洪水上涨，道路变成河流，有些驾驶人被迫弃车而逃。</p><p>此次降雨与穿越阿拉伯半岛并横跨阿曼湾的大型风暴系统有关。同样的系统也给附近的阿曼和伊朗东南部带来异常潮湿的天气。</p><p>阿曼国家紧急管理委员会表示，大雨引发的山洪爆发至少造成18人死亡。据阿曼国家通讯社报导，伤亡者包括学童。</p><p>阿联酋媒体和社群媒体帖文显示，暴雨对该国部分地区造成了严重破坏，包括道路倒塌和房屋被水淹没。</p><p>周二的社群媒体帖文显示，道路和停车场被洪水淹没，一些车辆完全被淹没。穿过迪拜的12车道高速公路谢赫扎耶德路（Sheikh Zayed Road）被部分淹没，导致人们陷入长达数小时的交通堵塞中。</p><p>周三，试图通过公路进入迪拜市中心的人们被困在高速公路上。由于道路堵塞，一些计程车司机拒绝载送通勤者。其中一些受困者从国外来到迪拜，参加定于下周初举行的世界区块链高峰会（World Blockchain Summit）。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgy.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E9%2598%25BF%25E8%2581%2594%25E9%2585%258B%25E9%2581%25AD%25E9%2581%2587%25E6%259C%2580%25E5%25A4%25A7%25E9%2599%258D%25E9%259B%25A8-%25E6%259C%25BA%25E5%259C%25BA%25E5%25A4%25A7%25E4%25B9%25B1-%25E5%25AD%25A6%25E6%25A0%25A1%25E5%2581%259C%25E8%25AF%25BE%25E4%25B8%2580%25E5%2591%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8%20-%20https%3A%2F%2Frfi.my%2FAWgy.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8%20-%20https%3A%2F%2Frfi.my%2FAWgy.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgy.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
