--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-20 [吹哨者：中国向联合国官员行贿　使联合国为中国服务](/articles/rfa/1037276.md)
+
 4-19 [李强现身广交会官媒高调报道　有展商拿不到外商几张名片](/articles/rfa/1037277.md)
 
 4-19 [网民直播提问"习是独裁者吗"？ 博主吓停直播却难逃封禁](/articles/rfa/1037278.md)
@@ -598,6 +600,4 @@
 3-18 [中国经济三马车部分回暖 房地产数据呈断崖下跌](/articles/rfa/1037574.md)
 
 3-18 [中国渔船金门翻覆事件后 台湾国安人士判断两岸局势并未升温](/articles/rfa/1037575.md)
-
-3-16 [五年未升副教授  博士变保安？　太原一高校已作废规定引热议](/articles/rfa/1037576.md)
 
